--- a/dapp3/translations/de_DE.json
+++ b/dapp3/translations/de_DE.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Twitter-Konto bestätigt",
   "2BpmkI": "Google-Konto bestätigt",
   "12mV06": "Telefon bestätigt",
@@ -85,6 +91,35 @@
     "schema.resumes": "Fortsetzungen",
     "schema.volunteers": "Freiwillige"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Lädt...",
+  "1ydkJH": "Weiter",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Veröffentlichen",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Aktivieren Sie Messaging",
   "1KvwDF": "Origin Messaging",
   "2XaOyJ": "Beginnen Sie mit Origin, bevor Sie diesem Benutzer eine Nachricht senden können",
@@ -108,6 +143,7 @@
   "4qkP5F": "Ernte",
   "BcfF1": "Löschen",
   "3N2LLn": "Ihr Browser unterstützt das Video-Tag nicht.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Verkauf abgeschlossen",
   "2sSICu": "Streit angefangen",
   "1pxzG8": "Urteil gemacht",
+  "1dxXSN": "Loslegen",
   "2XVXB5": "Schreiben an die Blockchain.",
   "48sqnA": "Dies kann eine Minute dauern.",
   "3JYttU": "Auf Bestätigung warten.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Lassen Sie uns Ihren Eintrag aktualisieren",
   "12qS4F": "Auflistungstyp aktualisieren",
   "3HqBJ": "Welche Art von Eintrag möchten Sie erstellen?",
-  "1ydkJH": "Weiter",
   "2oRomf": "Kategorie ist erforderlich",
   "tjihf": "Fügen Sie eine Auflistung hinzu",
   "3Piqbx": "Zahlung",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "Ausstehend",
   "4qOByY": "Verdient",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Token verdient",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Lädt...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Begleiten Sie mich auf Origin und verdienen Sie Origin-Kryptowährungs-Tokens (OGN). Origin ist ein neuer Marktplatz zum Kaufen und Verkaufen mit anderen Benutzern. Sammeln Sie Origin-Token, wenn Sie Ihr Profil erstellen, Ihre Freunde einladen und auf dem Marktplatz kaufen und verkaufen.",
   "1gCRzk": "Begleiten Sie mich auf Origin und verdienen Sie Origin-Kryptowährungs-Tokens (OGN). Origin ist ein neuer Marktplatz zum Kaufen und Verkaufen mit anderen Benutzern. Sammeln Sie Origin-Token, wenn Sie Ihr Profil erstellen, Ihre Freunde einladen und auf dem Marktplatz kaufen und verkaufen.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Loslegen",
   "2pjq9v": "Habe Fragen?",
   "4BVEan": "In Kontakt kommen",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Tritt unserer {campaignName} , um Token zu verdienen",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Loslegen",
   "2El6Ld": "Entlassen",
   "1R5Tqk": "Die Bedingungen akzeptieren",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Melden Sie sich für Origin an",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Ich akzeptiere die allgemeinen Geschäftsbedingungen",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Ups, {country} ist nicht zulässig",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Bestätige deine Telefonnummer",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Geben Sie unten Ihre Telefonnummer ein, und OriginID sendet Ihnen einen Bestätigungscode per SMS.",
-  "2kSdkz": "Durch die Überprüfung Ihrer Telefonnummer erteilen Sie Origin die Erlaubnis, Ihnen gelegentlich E-Mails zu senden, z. B. Benachrichtigungen zu Ihren Transaktionen.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Geben Sie unten den Code ein, den wir Ihnen gesendet haben",
   "OxVwu": "Telefonnummer verifiziert!",
   "2ocEjm": "Überprüfen Sie Ihr Twitter-Konto",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} von 6 Bestätigungen",
   "2XqpJE": "Komplett ({confirmations.noOfConfirmations} Bestätigungen)",
-  "1dxXSN": "Loslegen",
   "3UgV1b": "Verkaufen Sie auf Origin",
   "1Lm6gh": "Fehler beim Laden von Nachrichten",
   "2vAKrL": "Wird geladen...",
@@ -761,13 +798,17 @@
     "_1": "Benachrichtigung"
   },
   "1NaRKF": "Alle ansehen",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Verbunden",
-  "lGvCt": "ETH-Adresse",
-  "4CQP5I": "Profil bearbeiten",
-  "2lBtlo": "Settings",
-  "11UGHW": "Meine Identität",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Unbenannter Benutzer",
   "2qHaXn": "Profil Stärke",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} Ihr Angebot wurde am {title}abgelehnt",
   "2nsNrC": "{nameLink} Ihr Angebot wurde am {title}",
   "3VLvv1": "Transaktion mit {nameLink} für {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Warum muss ich das tun?",
   "1uKbVV": "Informationen zu Origin Messaging",
   "2tPHpd": "Eine Kryptowährungsgeldbörse ist ein Softwareprogramm, das private und öffentliche Schlüssel speichert und mit verschiedenen Blockchain interagiert, um Benutzern das Senden und Empfangen digitaler Währungen und die Überwachung ihres Kontostands zu ermöglichen. Wenn Sie Bitcoin oder eine andere Kryptowährung verwenden möchten, benötigen Sie eine digitale Geldbörse.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Über Identität in der Blockchain",
   "4o9sVo": "Eine Kryptowährungsgeldbörse ist ein Softwareprogramm, das private und öffentliche Schlüssel speichert und mit verschiedenen Blockchain interagiert, um Benutzern das Senden und Empfangen digitaler Währungen und die Überwachung ihres Kontostands zu ermöglichen. Wenn Sie Bitcoin oder eine andere Kryptowährung verwenden möchten, benötigen Sie eine digitale Geldbörse.",
   "1JNI6V": "Lernen Sie mehr",
   "3NRLhm": "Was ist eine Crypto Wallet?",
   "2HUml2": "Eine Kryptowährungsgeldbörse ist ein Softwareprogramm, das private und öffentliche Schlüssel speichert und mit verschiedenen Blockchain interagiert, um Benutzern das Senden und Empfangen digitaler Währungen und die Überwachung ihres Kontostands zu ermöglichen. Wenn Sie Bitcoin oder eine andere Kryptowährung verwenden möchten, benötigen Sie eine digitale Geldbörse.",
   "28APX7": "Ihr Eintrag wartet ...",
-  "1IXSHG": "Herzliche Glückwünsche",
-  "34IDA4": "Sie haben Ihr Konto erfolgreich aktiviert. Sie können jetzt Ihre Reise auf dem Origin Marketplace fortsetzen.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Sie haben nun folgende Schritte ausgeführt:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Brieftasche Erstellung",
-  "2sG5u1": "Messaging aktiviert",
-  "2ApFEM": "Desktopbenachrichtigungen aktiviert",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Restliche Schritte:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Geld auf deine Brieftasche",
-  "4hOCr3": "Vervollständige dein Profil",
+  "jC283": "Schließen Sie eine Crypto Wallet an",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Origin Messaging",
   "4aVWeW": "Origin Messaging-Synchronisierung",
   "mmY61": "0 von 2 MetaMask-Nachrichten signiert",
@@ -853,26 +885,12 @@
   "CagXi": "Kein Web3",
   "2pKTLR": "Süss! Desktopbenachrichtigungen sind aktiviert :)",
   "XIw7y": "Fertig machen",
-  "1p9mMH": "Geben Sie Ihre Profilinformationen ein",
-  "2dpEtI": "Vorname",
-  "h7cxv": "Nachname",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} Sie benötigen Geld in Ihrer Brieftasche, um eine Identität zu erstellen. Sie können dies später tun, nachdem Sie Ihre Brieftasche bezahlt haben, indem Sie zu Ihren Einstellungen wechseln.",
-  "3uPAxx": "Sie haben kein Geld",
-  "1xCh1J": "Veröffentlichen",
-  "2Np1YB": "Für jetzt überspringen",
-  "2RQByv": "veröffentlicht",
-  "1QWML6": "vorläufig",
-  "39z7m5": "bald",
-  "1IS4x0": "interaktiv",
-  "3qH7cV": "Vorname ist erforderlich",
-  "2jWTcd": "Origin Mobile Brieftasche",
-  "CBV19": "Mit dem Mobile Wallet von Origin können Sie Kryptowährung speichern, um auf unserer DApp zu kaufen und zu verkaufen.",
-  "3Wb2Vz": "Verfügbar für iOS und Android",
-  "2nj6ZX": "MetaMask ist eine Browsererweiterung, mit der Sie auf das dezentrale Web zugreifen können.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Verfügbar für {browser}",
   "29RrPk": "Verbinden Sie die MetaMask",
-  "jC283": "Schließen Sie eine Crypto Wallet an",
   "2lqwoN": "Lädt...",
   "3UjbU1": "Desktopbenachrichtigungen aktiviert ✅",
   "gLVF0": "die Einstellungen",
@@ -888,6 +906,9 @@
   "38WM0A": "Bridge Server",
   "23S1SF": "Erkennungsserver",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Unbenannter Benutzer",
