--- a/dapp3/translations/el_GR.json
+++ b/dapp3/translations/el_GR.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Ο λογαριασμός Twitter επαληθεύτηκε",
   "2BpmkI": "Έλεγχος λογαριασμού Google",
   "12mV06": "Τηλέφωνο επαλήθευση",
@@ -85,6 +91,35 @@
     "schema.resumes": "Βιογραφικά σημειώματα",
     "schema.volunteers": "Εθελοντές"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Φόρτωση...",
+  "1ydkJH": "Συνέχεια",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Δημοσιεύω",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Ενεργοποίηση Μηνυμάτων",
   "1KvwDF": "Αρχική μηνύματα",
   "2XaOyJ": "Ξεκινήστε με τη χρήση της προέλευσης, για να μπορέσετε να στείλετε σε αυτόν το χρήστη ένα μήνυμα",
@@ -108,6 +143,7 @@
   "4qkP5F": "Καλλιέργεια",
   "BcfF1": "Αφαιρώ",
   "3N2LLn": "Το πρόγραμμα περιήγησης που χρησιμοποιείτε δεν υποστηρίζει την ετικέτα βίντεο.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Η πώληση ολοκληρώθηκε",
   "2sSICu": "Η διαφορά ξεκίνησε",
   "1pxzG8": "Επιλέχθηκε απόφαση",
+  "1dxXSN": "Ξεκίνα",
   "2XVXB5": "Γράφοντας στο blockchain.",
   "48sqnA": "Αυτό μπορεί να διαρκέσει ένα λεπτό.",
   "3JYttU": "Αναμονή για επιβεβαίωση.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Ας ενημερώσουμε την καταχώρισή σας",
   "12qS4F": "Ενημέρωση τύπου καταχώρησης",
   "3HqBJ": "Τι είδους καταχώρηση θέλετε να δημιουργήσετε;",
-  "1ydkJH": "Συνέχεια",
   "2oRomf": "Απαιτείται κατηγορία",
   "tjihf": "Προσθήκη λίστας",
   "3Piqbx": "Πληρωμή",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "Σε εκκρεμότητα",
   "4qOByY": "Κερδηθείς",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Τα κέρδη που κερδίσατε",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Φόρτωση...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Συμμετάσχετε μαζί μου στο Origin και κερδίζετε Origin crypocurrency tokens (OGN). Η προέλευση είναι μια νέα αγορά για αγορά και πώληση με άλλους χρήστες. Κερδίστε νομίσματα Origin όταν δημιουργείτε το προφίλ σας, καλέστε τους φίλους σας και αγοράστε και πουλήστε στην αγορά.",
   "1gCRzk": "Συμμετάσχετε μαζί μου στο Origin και κερδίζετε Origin crypocurrency tokens (OGN). Η προέλευση είναι μια νέα αγορά για αγορά και πώληση με άλλους χρήστες. Κερδίστε νομίσματα Origin όταν δημιουργείτε το προφίλ σας, καλέστε τους φίλους σας και αγοράστε και πουλήστε στην αγορά.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Ξεκίνα",
   "2pjq9v": "Έχετε ερωτήσεις;",
   "4BVEan": "Ερχομαι σε επαφή",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Εγγραφείτε στο {campaignName} για να κερδίσετε μάρκες",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Ξεκίνα",
   "2El6Ld": "Ακύρωση",
   "1R5Tqk": "Αποδοχή Όρων",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Εγγραφείτε για την καταγωγή",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Αποδέχομαι τους όρους και τις προϋποθέσεις",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Ωχ, το {country} δεν είναι κατάλληλο",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Επαληθεύστε τον αριθμό τηλεφώνου σας",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Εισαγάγετε τον αριθμό τηλεφώνου σας παρακάτω και το OriginID θα σας στείλει έναν κωδικό επαλήθευσης μέσω SMS.",
-  "2kSdkz": "Με την επαλήθευση του αριθμού τηλεφώνου σας, δώστε την άδεια Origin για να σας στείλουμε περιστασιακά μηνύματα ηλεκτρονικού ταχυδρομείου, όπως ειδοποιήσεις σχετικά με τις συναλλαγές σας.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Πληκτρολογήστε τον κωδικό που σας έστειλα παρακάτω",
   "OxVwu": "Ο αριθμός τηλεφώνου επαλήθευσε!",
   "2ocEjm": "Επαληθεύστε τον λογαριασμό Twitter",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} από 6 επιβεβαιώσεις",
   "2XqpJE": "Πλήρης ({confirmations.noOfConfirmations} επιβεβαιώσεις)",
-  "1dxXSN": "Ξεκίνα",
   "3UgV1b": "Πουλήστε στην προέλευση",
   "1Lm6gh": "Σφάλμα φόρτωσης μηνυμάτων",
   "2vAKrL": "Φόρτωση...",
@@ -761,13 +798,17 @@
     "_1": "Γνωστοποίηση"
   },
   "1NaRKF": "Προβολή όλων",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Συνδεδεμένος με",
-  "lGvCt": "Διεύθυνση ETH",
-  "4CQP5I": "Επεξεργασία προφίλ",
-  "2lBtlo": "Settings",
-  "11UGHW": "Η ταυτότητά μου",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Άγνωστος χρήστης",
   "2qHaXn": "Αντοχή προφίλ",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} απορρίφθηκε η προσφορά σας στο {title}",
   "2nsNrC": "{nameLink} δέχτηκε την προσφορά σας στο {title}",
   "3VLvv1": "Συναλλαγή με {nameLink} οριστικοποιημένη για {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Γιατί πρέπει να το κάνω αυτό;",
   "1uKbVV": "Σχετικά με την αρχή μηνυμάτων",
   "2tPHpd": "Ένα πορτοφόλι κρυπτογράφησης είναι ένα πρόγραμμα λογισμικού που αποθηκεύει ιδιωτικά και δημόσια κλειδιά και αλληλεπιδρά με διάφορα blockchain για να επιτρέπει στους χρήστες να στέλνουν και να λαμβάνουν ψηφιακό νόμισμα και να παρακολουθούν την ισορροπία τους. Εάν θέλετε να χρησιμοποιήσετε Bitcoin ή οποιαδήποτε άλλη κρυπτογράφηση, θα χρειαστεί να έχετε ένα ψηφιακό πορτοφόλι.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Σχετικά με την ταυτότητα στο Blockchain",
   "4o9sVo": "Ένα πορτοφόλι κρυπτογράφησης είναι ένα πρόγραμμα λογισμικού που αποθηκεύει ιδιωτικά και δημόσια κλειδιά και αλληλεπιδρά με διάφορα blockchain για να επιτρέπει στους χρήστες να στέλνουν και να λαμβάνουν ψηφιακό νόμισμα και να παρακολουθούν την ισορροπία τους. Εάν θέλετε να χρησιμοποιήσετε Bitcoin ή οποιαδήποτε άλλη κρυπτογράφηση, θα χρειαστεί να έχετε ένα ψηφιακό πορτοφόλι.",
   "1JNI6V": "Μάθετε περισσότερα",
   "3NRLhm": "Τι είναι το πορτοφόλι Crypto;",
   "2HUml2": "Ένα πορτοφόλι κρυπτογράφησης είναι ένα πρόγραμμα λογισμικού που αποθηκεύει ιδιωτικά και δημόσια κλειδιά και αλληλεπιδρά με διάφορα blockchain για να επιτρέπει στους χρήστες να στέλνουν και να λαμβάνουν ψηφιακό νόμισμα και να παρακολουθούν την ισορροπία τους. Εάν θέλετε να χρησιμοποιήσετε Bitcoin ή οποιαδήποτε άλλη κρυπτογράφηση, θα χρειαστεί να έχετε ένα ψηφιακό πορτοφόλι.",
   "28APX7": "Η εγγραφή σας περιμένει ...",
-  "1IXSHG": "Συγχαρητήρια",
-  "34IDA4": "Έχετε ενεργοποιήσει με επιτυχία το λογαριασμό σας. Είστε πλέον έτοιμοι να συνεχίσετε το ταξίδι σας στο Origin Market.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Τώρα έχετε ολοκληρώσει τα εξής:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Δημιουργία Πορτοφολιού",
-  "2sG5u1": "Μηνύματα Ενεργοποιημένο",
-  "2ApFEM": "Οι Ειδοποιήσεις επιφάνειας εργασίας είναι ενεργοποιημένες",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Εναλλακτικά βήματα:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Χρηματοδοτήστε το πορτοφόλι σας",
-  "4hOCr3": "Ολοκληρώστε το προφίλ σας",
+  "jC283": "Συνδέστε ένα πορτοφόλι Crypto",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Αρχική μηνύματα",
   "4aVWeW": "Προέλευση συγχρονισμού μηνυμάτων",
   "mmY61": "Υποβλήθηκε 0 από 2 μηνύματα MetaMask",
@@ -853,26 +885,12 @@
   "CagXi": "Δεν Web3",
   "2pKTLR": "Γλυκός! Οι ειδοποιήσεις επιφάνειας εργασίας είναι ενεργοποιημένες :)",
   "XIw7y": "Ξεκινώντας",
-  "1p9mMH": "Εισαγάγετε τα στοιχεία του προφίλ σας",
-  "2dpEtI": "Όνομα",
-  "h7cxv": "Επώνυμο",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} Πρέπει να έχετε χρήματα στο πορτοφόλι σας για να δημιουργήσετε μια ταυτότητα. Μπορείτε να το κάνετε αυτό αργότερα, αφού χρηματοδοτήσετε το πορτοφόλι σας μεταβαίνοντας στις ρυθμίσεις σας.",
-  "3uPAxx": "Δεν έχετε κεφάλαια",
-  "1xCh1J": "Δημοσιεύω",
-  "2Np1YB": "Παράλειψη για τώρα",
-  "2RQByv": "που δημοσιεύθηκε",
-  "1QWML6": "προσωρινός",
-  "39z7m5": "σύντομα",
-  "1IS4x0": "διαδραστικό",
-  "3qH7cV": "Το όνομα είναι υποχρεωτικό",
-  "2jWTcd": "Πορτοφόλι για κινητά προέλευσης",
-  "CBV19": "Το Mobile Wallet της Origin θα σας επιτρέψει να αποθηκεύσετε το κρυπτογραφημένο νόμισμα, ώστε να μπορείτε να αγοράσετε και να πουλήσετε στο DApp μας.",
-  "3Wb2Vz": "Διατίθεται για iOS και Android",
-  "2nj6ZX": "Το MetaMask είναι μια επέκταση του προγράμματος περιήγησης που θα σας επιτρέψει να έχετε πρόσβαση στον αποκεντρωμένο ιστό.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Διαθέσιμο για {browser}",
   "29RrPk": "Συνδέστε το MetaMask",
-  "jC283": "Συνδέστε ένα πορτοφόλι Crypto",
   "2lqwoN": "Φόρτωση...",
   "3UjbU1": "Οι ειδοποιήσεις επιφάνειας εργασίας είναι ενεργοποιημένες ✅",
   "gLVF0": "Ρυθμίσεις",
@@ -888,6 +906,9 @@
   "38WM0A": "Γέφυρα Διακομιστή",
   "23S1SF": "Διακομιστής ανακάλυψης",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Ανώνυμος χρήστης",
