--- a/dapp3/translations/es_ES.json
+++ b/dapp3/translations/es_ES.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Cuenta de Twitter verificada",
   "2BpmkI": "Cuenta de Google verificada",
   "12mV06": "Teléfono verificado",
@@ -85,6 +91,35 @@
     "schema.resumes": "Currículums",
     "schema.volunteers": "Voluntarios"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Cargando...",
+  "1ydkJH": "Continuar",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Publicar",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Habilitar mensajería",
   "1KvwDF": "Mensajería de origen",
   "2XaOyJ": "Comience a usar Origin antes de que pueda enviar un mensaje a este usuario",
@@ -108,6 +143,7 @@
   "4qkP5F": "Cultivo",
   "BcfF1": "retirar",
   "3N2LLn": "Su navegador no soporta la etiqueta de vídeo.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Venta Completada",
   "2sSICu": "Disputa iniciada",
   "1pxzG8": "Dictado hecho",
+  "1dxXSN": "Empezar",
   "2XVXB5": "Escribiendo a la blockchain.",
   "48sqnA": "Esto podría tomar un minuto.",
   "3JYttU": "Esperando confirmación.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Vamos a actualizar su listado",
   "12qS4F": "Actualizar el tipo de listado",
   "3HqBJ": "¿Qué tipo de anuncio desea crear?",
-  "1ydkJH": "Continuar",
   "2oRomf": "la categoria es requerida",
   "tjihf": "Añadir una lista",
   "3Piqbx": "Pago",
@@ -502,7 +538,6 @@
   "wY0C5": "Más detalles",
   "4ETL05": "Pendientes",
   "4qOByY": "Ganado",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "Todos",
   "2j242e": "Desbloqueado",
@@ -521,7 +556,6 @@
   "4FezaJ": "Fichas ganadas",
   "2haWvO": "Ganancias Totales",
   "1erpVf": "Fichas ganadas",
-  "2CPasx": "Cargando...",
   "2tRIOg": "No se detectaron campañas",
   "2iDrtJ": "Únase a mí en Origin y gane fichas de criptomoneda de origen (OGN). Origin es un nuevo mercado para comprar y vender con otros usuarios. Gane fichas de Origen cuando cree su perfil, invite a sus amigos y compre y venda en el mercado.",
   "1gCRzk": "Únase a mí en Origin y gane fichas de criptomoneda de origen (OGN). Origin es un nuevo mercado para comprar y vender con otros usuarios. Gane fichas de Origen cuando cree su perfil, invite a sus amigos y compre y venda en el mercado.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Empezar",
   "2pjq9v": "¿Tener preguntas?",
   "4BVEan": "Estar en contacto",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Únete a la campaña",
   "44Obrh": "Únete a nuestro {campaignName} para ganar tokens.",
   "1JeQU0": "Gane OGN completando tareas como verificar su identidad y compartir Origin con sus amigos. OGN se puede utilizar de varias maneras. El OGN ganado se transferirá después del final del {campaignName}.",
   "4fuMIp": "Empezar",
   "2El6Ld": "Despedir",
   "1R5Tqk": "Aceptar los terminos",
-  "m0l6": "Registrarse en Origin",
-  "2EpzBo": "Registrarse en Origin",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Acepto los términos y condiciones",
   "2JZUuK": "País no elegible",
   "3ARgQ2": "Vaya, {country} no es elegible",
@@ -629,9 +663,13 @@
   "3d1Uto": "Otros usuarios sabrán que tienes una cuenta de Google verificada, pero los detalles de tu cuenta no se publicarán en la blockchain. Nunca publicaremos en su nombre.",
   "FoBDR": "¡Cuenta de Google verificada!",
   "1ZMsNQ": "¡Éxito!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifica tu numero de telefono",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Ingrese su número de teléfono a continuación y OriginID le enviará un código de verificación por SMS.",
-  "2kSdkz": "Al verificar su número de teléfono, le otorga a Origin el permiso para enviarle correos electrónicos ocasionales, como notificaciones sobre sus transacciones.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Ingrese el código que le enviamos a continuación",
   "OxVwu": "Número de teléfono verificado!",
   "2ocEjm": "Verifica tu cuenta de Twitter",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} de 6 confirmaciones",
   "2XqpJE": "Completa ({confirmations.noOfConfirmations} confirmaciones)",
-  "1dxXSN": "Empezar",
   "3UgV1b": "Vender en origen",
   "1Lm6gh": "Error al cargar mensajes",
   "2vAKrL": "Cargando...",
@@ -761,13 +798,17 @@
     "_1": "Notificación"
   },
   "1NaRKF": "Ver todo",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Conectado a",
-  "lGvCt": "Dirección ETH",
-  "4CQP5I": "Editar perfil",
-  "2lBtlo": "Ajustes",
-  "11UGHW": "Mi identidad",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Usuario sin nombre",
   "2qHaXn": "Fuerza del perfil",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} rechazó su oferta en {title}",
   "2nsNrC": "{nameLink} aceptó su oferta en {title}",
   "3VLvv1": "Transacción con {nameLink} finalizado para {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "¿Por qué necesito hacer esto?",
   "1uKbVV": "Acerca de la mensajería de origen",
   "2tPHpd": "Un monedero de criptomoneda es un programa de software que almacena claves privadas y públicas e interactúa con varios blockchain para permitir a los usuarios enviar y recibir dinero digital y monitorear su saldo. Si desea utilizar Bitcoin o cualquier otra criptomoneda, necesitará tener una billetera digital.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Sobre la identidad en la cadena de bloques",
   "4o9sVo": "Un monedero de criptomoneda es un programa de software que almacena claves privadas y públicas e interactúa con varios blockchain para permitir a los usuarios enviar y recibir dinero digital y monitorear su saldo. Si desea utilizar Bitcoin o cualquier otra criptomoneda, necesitará tener una billetera digital.",
   "1JNI6V": "Sepa más",
   "3NRLhm": "¿Qué es una cartera criptográfica?",
   "2HUml2": "Un monedero de criptomoneda es un programa de software que almacena claves privadas y públicas e interactúa con varios blockchain para permitir a los usuarios enviar y recibir dinero digital y monitorear su saldo. Si desea utilizar Bitcoin o cualquier otra criptomoneda, necesitará tener una billetera digital.",
   "28APX7": "Tu anuncio está esperando ...",
-  "1IXSHG": "Felicidades",
-  "34IDA4": "Has activado exitosamente tu cuenta. Ahora está listo para continuar su viaje en el Mercado de origen.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Ya has completado lo siguiente:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Creación de billetera",
-  "2sG5u1": "Mensajería habilitada",
-  "2ApFEM": "Notificaciones de escritorio habilitadas",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Pasos restantes:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Financia tu billetera",
-  "4hOCr3": "Completa tu perfil",
+  "jC283": "Conecte una billetera criptográfica",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Mensajería de origen",
   "4aVWeW": "Sincronización de mensajes de origen",
   "mmY61": "0 de 2 mensajes de MetaMask firmados",
@@ -853,26 +885,12 @@
   "CagXi": "No web3",
   "2pKTLR": "¡Dulce! Las notificaciones de escritorio están encendidas :)",
   "XIw7y": "Empezando",
-  "1p9mMH": "Ingrese su información de perfil",
-  "2dpEtI": "Nombre",
-  "h7cxv": "Apellido",
-  "2pz6sX": "Cuéntenos un poco sobre usted",
-  "3uFhNl": "{=You don't have funds} Necesitas tener fondos en tu billetera para crear una identidad. Siempre puede hacer esto más tarde después de financiar su billetera yendo a su configuración.",
-  "3uPAxx": "No tienes fondos",
-  "1xCh1J": "Publicar",
-  "2Np1YB": "Saltar por ahora",
-  "2RQByv": "publicado",
-  "1QWML6": "provisional",
-  "39z7m5": "pronto",
-  "1IS4x0": "interactivo",
-  "3qH7cV": "Se requiere el primer nombre",
-  "2jWTcd": "Cartera Móvil Origin",
-  "CBV19": "El Mobile Wallet de Origin's le permitirá almacenar monedas criptográficas para que pueda comprar y vender en nuestro DApp.",
-  "3Wb2Vz": "Disponible para iOS y Android",
-  "2nj6ZX": "MetaMask es una extensión del navegador que te permitirá acceder a la web descentralizada.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Disponible para {browser}",
   "29RrPk": "Conectar MetaMask",
-  "jC283": "Conecte una billetera criptográfica",
   "2lqwoN": "Cargando...",
   "3UjbU1": "Notificaciones de escritorio habilitadas ✅",
   "gLVF0": "Ajustes",
@@ -888,6 +906,9 @@
   "38WM0A": "Servidor Puente",
   "23S1SF": "Servidor de descubrimiento",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Retenida",
   "NrhOS": "Liberar",
   "QUO1v": "Cantidad",
@@ -1044,20 +1065,13 @@
   "2330bB": "Gane aún más OGN cuando verifique sus perfiles de Facebook, Twitter y Airbnb.",
   "1b7Zwb": "Ganar hasta",
   "29Quwo": "¡Entendido!",
-  "1tixem": "Siguiente paso: verifique su número de teléfono",
-  "2k5cTO": "Fortalezca aún más su perfil al verificar un número de teléfono válido de 10 dígitos",
-  "IqnqE": "Verifique para ganar",
-  "Ek9Tv": "Continuar",
-  "4okJre": "Siguiente paso: verifique su email",
-  "3VMsLo": "Publique para guardar sus cambios o continuar con las verificaciones",
-  "cjvCD": "Publicar cambios",
   "2MO8B7": "Publicar cambios",
-  "1JLKPg": "Inscríbase para ganar fichas de criptomoneda de origen (OGN)",
-  "1YFhvm": "Gane fichas completando su perfil.",
-  "3iqW1P": "Enlístese ahora",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Omitir",
-  "33tWcy": "Suba una foto y proporcione un nombre y una descripción",
-  "1LH6Qw": "Empezar",
   "fs65Z": "Tiene cambios inéditos",
   "3O45za": "Impulsado por",
   "2jblSi": "Usuario sin nombre",
