--- a/dapp3/translations/fil_PH.json
+++ b/dapp3/translations/fil_PH.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Na-verify ang Twitter Account",
   "2BpmkI": "Na-verify ang Google Account",
   "12mV06": "Na-verify na Telepono",
@@ -85,6 +91,35 @@
     "schema.resumes": "Mga resume",
     "schema.volunteers": "Mga nagboluntaryo"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Naglo-load...",
+  "1ydkJH": "Magpatuloy",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "I-publish",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Paganahin ang Pagmemensahe",
   "1KvwDF": "Pinagmulan Messaging",
   "2XaOyJ": "Magsimula gamit ang Pinagmulan bago mo maipadala ang user na ito ng isang mensahe",
@@ -108,6 +143,7 @@
   "4qkP5F": "I-crop",
   "BcfF1": "Alisin",
   "3N2LLn": "Hindi sinusuportahan ng iyong browser ang tag ng video.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Natapos ang Pagbebenta",
   "2sSICu": "Sinimulan ang Pagtatalo",
   "1pxzG8": "Ginagawa ang Ginagawa",
+  "1dxXSN": "Magsimula",
   "2XVXB5": "Sumulat sa blockchain.",
   "48sqnA": "Maaaring tumagal ng isang minuto.",
   "3JYttU": "Naghihintay ng kumpirmasyon.",
@@ -237,7 +274,6 @@
   "2fdHS3": "I-update natin ang iyong listahan",
   "12qS4F": "I-update ang uri ng listahan",
   "3HqBJ": "Anong uri ng listahan ang gusto mong gawin?",
-  "1ydkJH": "Magpatuloy",
   "2oRomf": "Kinakailangan ang kategorya",
   "tjihf": "Magdagdag ng Listahan",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "Nakabinbin",
   "4qOByY": "Nagkamit",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Nakuha ang mga token",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Naglo-load...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Sumali sa akin sa Pinagmulan at kumita ng mga pinagmulan ng cryptocurrency na mga token (OGN). Pinagmulan ay isang bagong marketplace upang bumili at magbenta sa iba pang mga gumagamit. Kumita ng mga token ng Pinagmumulan kapag nilikha mo ang iyong profile, anyayahan ang iyong mga kaibigan, at bumili at magbenta sa marketplace.",
   "1gCRzk": "Sumali sa akin sa Pinagmulan at kumita ng mga pinagmulan ng cryptocurrency na mga token (OGN). Pinagmulan ay isang bagong marketplace upang bumili at magbenta sa iba pang mga gumagamit. Kumita ng mga token ng Pinagmumulan kapag nilikha mo ang iyong profile, anyayahan ang iyong mga kaibigan, at bumili at magbenta sa marketplace.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Magsimula",
   "2pjq9v": "May mga tanong?",
   "4BVEan": "Makipag-ugnayan",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Sumali sa aming {campaignName} upang kumita ng mga token",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Magsimula",
   "2El6Ld": "I-dismiss",
   "1R5Tqk": "Tanggapin ang Mga Tuntunin",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Mag-sign Up para sa Pinagmulan",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Tinatanggap ko ang mga tuntunin at kundisyon",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Oops, {country} ay hindi karapat-dapat",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "I-verify ang iyong numero ng telepono",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Ipasok ang numero ng iyong telepono sa ibaba at ang OriginID ay magpapadala sa iyo ng isang verification code sa pamamagitan ng SMS.",
-  "2kSdkz": "Sa pamamagitan ng pag-verify ng iyong numero ng telepono, nagbigay ka ng pahintulot ng Pinagmulan upang padalhan ka ng mga paminsan-minsang mga email tulad ng mga notification tungkol sa iyong mga transaksyon",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Ipasok ang code na ipinadala namin sa iyo sa ibaba",
   "OxVwu": "Na-verify ang numero ng telepono!",
   "2ocEjm": "I-verify ang iyong Twitter Account",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} ng 6 pagkumpirma",
   "2XqpJE": "Kumpletuhin ({confirmations.noOfConfirmations} pagkumpirma)",
-  "1dxXSN": "Magsimula",
   "3UgV1b": "Ibenta sa Pinagmulan",
   "1Lm6gh": "Error sa paglo-load ng mga mensahe",
   "2vAKrL": "Naglo-load ...",
@@ -761,13 +798,17 @@
     "_1": "Abiso"
   },
   "1NaRKF": "Tingnan lahat",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Nakakonekta sa",
-  "lGvCt": "ETH Address",
-  "4CQP5I": "Ibahin ang profile",
-  "2lBtlo": "Settings",
-  "11UGHW": "Aking Pagkakakilanlan",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Walang Pangalan",
   "2qHaXn": "Lakas ng Profile",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} tinanggihan ang iyong alok sa {title}",
   "2nsNrC": "{nameLink} tinanggap iyong alok sa {title}",
   "3VLvv1": "Transaksyon na may {nameLink} tinatapos para sa {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Bakit kailangan kong gawin ito?",
   "1uKbVV": "Tungkol sa Pinagmulan ng Messaging",
   "2tPHpd": "Ang isang cryptocurrency wallet ay isang software program na nag-iimbak ng pribado at pampublikong mga susi at nakikipag-ugnayan sa iba't ibang blockchain upang paganahin ang mga user na magpadala at tumanggap ng digital na pera at subaybayan ang kanilang balanse. Kung nais mong gamitin ang Bitcoin o anumang iba pang cryptocurrency, kakailanganin mong magkaroon ng isang digital wallet.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Tungkol sa Pagkakakilanlan sa Blockchain",
   "4o9sVo": "Ang isang cryptocurrency wallet ay isang software program na nag-iimbak ng pribado at pampublikong mga susi at nakikipag-ugnayan sa iba't ibang blockchain upang paganahin ang mga user na magpadala at tumanggap ng digital na pera at subaybayan ang kanilang balanse. Kung nais mong gamitin ang Bitcoin o anumang iba pang cryptocurrency, kakailanganin mong magkaroon ng isang digital wallet.",
   "1JNI6V": "Matuto pa",
   "3NRLhm": "Ano ang isang Crypto Wallet?",
   "2HUml2": "Ang isang cryptocurrency wallet ay isang software program na nag-iimbak ng pribado at pampublikong mga susi at nakikipag-ugnayan sa iba't ibang blockchain upang paganahin ang mga user na magpadala at tumanggap ng digital na pera at subaybayan ang kanilang balanse. Kung nais mong gamitin ang Bitcoin o anumang iba pang cryptocurrency, kakailanganin mong magkaroon ng isang digital wallet.",
   "28APX7": "Naghihintay ang iyong listahan ...",
-  "1IXSHG": "Binabati kita",
-  "34IDA4": "Matagumpay mong naisaaktibo ang iyong account. Handa ka na ngayong ipagpatuloy ang iyong paglalakbay sa Origin Marketplace.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Nakumpleto mo na ngayon ang mga sumusunod:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Paglikha ng Wallet",
-  "2sG5u1": "Pinagana ang Pag-e-mail",
-  "2ApFEM": "Pinagana ang Mga Notification sa Desktop",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Mga natitirang hakbang:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Pondo ang iyong wallet",
-  "4hOCr3": "Kumpletuhin ang iyong Profile",
+  "jC283": "Kumonekta sa isang Crypto Wallet",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Pinagmulan Messaging",
   "4aVWeW": "Pag-sync ng Orihinal na Messaging",
   "mmY61": "0 ng 2 MetaMask mga mensahe naka-sign",
@@ -853,26 +885,12 @@
   "CagXi": "Walang Web3",
   "2pKTLR": "Sweet! Ang mga notification sa desktop ay nasa :)",
   "XIw7y": "Nagsisimula",
-  "1p9mMH": "Ipasok ang iyong Impormasyon sa Profile",
-  "2dpEtI": "Pangalan",
-  "h7cxv": "Apelyido",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} Kailangan mong magkaroon ng mga pondo sa iyong wallet upang lumikha ng isang identity. Maaari mong palaging gawin ito sa ibang pagkakataon pagkatapos mong pondohan ang iyong wallet sa pamamagitan ng pagpunta sa iyong mga setting.",
-  "3uPAxx": "Wala kang mga pondo",
-  "1xCh1J": "I-publish",
-  "2Np1YB": "Laktawan sa ngayon",
-  "2RQByv": "nai-publish",
-  "1QWML6": "pansamantala",
-  "39z7m5": "sa lalong madaling panahon",
-  "1IS4x0": "interactive",
-  "3qH7cV": "Kinakailangan ang Unang Pangalan",
-  "2jWTcd": "Pinagmulan Mobile Wallet",
-  "CBV19": "Pinapayagan ka ng Mobile Wallet ng Pinagmulan na mag-imbak ng crypto currency upang maaari kang bumili at magbenta sa aming DApp.",
-  "3Wb2Vz": "Magagamit para sa iOS at Android",
-  "2nj6ZX": "Ang MetaMask ay isang extension ng browser na magbibigay-daan sa iyo upang ma-access ang desentralisadong web.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Magagamit para sa {browser}",
   "29RrPk": "Ikonekta ang MetaMask",
-  "jC283": "Kumonekta sa isang Crypto Wallet",
   "2lqwoN": "Naglo-load...",
   "3UjbU1": "Pinagana ang mga notification sa desktop ✅",
   "gLVF0": "Mga Setting",
@@ -888,6 +906,9 @@
   "38WM0A": "Bridge Server",
   "23S1SF": "Discovery Server",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Walang pangalang user",
