--- a/dapp3/translations/hr_HR.json
+++ b/dapp3/translations/hr_HR.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Twitter račun potvrđen",
   "2BpmkI": "Google račun je potvrđen",
   "12mV06": "Telefon je potvrđen",
@@ -85,6 +91,35 @@
     "schema.resumes": "biografije",
     "schema.volunteers": "volonteri"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Učitavam...",
+  "1ydkJH": "Nastaviti",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Objaviti",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Omogući slanje poruka",
   "1KvwDF": "Izvor poruke",
   "2XaOyJ": "Početak korištenja izvora prije nego što možete poslati poruku korisniku",
@@ -108,6 +143,7 @@
   "4qkP5F": "Usjev",
   "BcfF1": "Ukloniti",
   "3N2LLn": "Vaš preglednik ne podržava oznaku videozapisa.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Prodaja je dovršena",
   "2sSICu": "Pokrenut je spor",
   "1pxzG8": "Tumačenje",
+  "1dxXSN": "Započnite",
   "2XVXB5": "Pisanje na blok-lanac.",
   "48sqnA": "To može potrajati nekoliko minuta.",
   "3JYttU": "Čeka potvrdu.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Ažurirajmo vaš unos",
   "12qS4F": "Ažuriraj vrstu popisa",
   "3HqBJ": "Koju vrstu unosa želite izraditi?",
-  "1ydkJH": "Nastaviti",
   "2oRomf": "Potrebna je kategorija",
   "tjihf": "Dodaj popis",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "U tijeku",
   "4qOByY": "zarađen",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Tokeni su zarađeni",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Učitavam...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Pridružite mi se na Porijeklo i zaradite Origin kripto valutu (OGN). Porijeklo je novo tržište za kupnju i prodaju s drugim korisnicima. Zaradite tokene podrijetla kada stvorite svoj profil, pozovete prijatelje i kupite i prodate na tržištu.",
   "1gCRzk": "Pridružite mi se na Porijeklo i zaradite Origin kripto valutu (OGN). Porijeklo je novo tržište za kupnju i prodaju s drugim korisnicima. Zaradite tokene podrijetla kada stvorite svoj profil, pozovete prijatelje i kupite i prodate na tržištu.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Započnite",
   "2pjq9v": "Imate pitanja?",
   "4BVEan": "Javite se",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Pridružite se našoj {campaignName} da biste zaradili žetone",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Započnite",
   "2El6Ld": "Odbaciti",
   "1R5Tqk": "Prihvaćanje uvjeta",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Prijavite se za podrijetlo",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Prihvaćam uvjete i odredbe",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Ups, {country} ne ispunjava uvjete",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Potvrdite svoj telefonski broj",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "U nastavku unesite svoj telefonski broj i OriginID će vam poslati kôd za provjeru putem SMS-a.",
-  "2kSdkz": "Potvrđivanjem vašeg telefonskog broja dajete dopuštenje za porijeklo kako biste mogli slati povremene poruke e-pošte, kao što su obavijesti o vašim transakcijama.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Unesite kôd koji smo vam poslali u nastavku",
   "OxVwu": "Telefonski broj potvrđen!",
   "2ocEjm": "Potvrdite svoj Twitter račun",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} od 6 potvrda",
   "2XqpJE": "Dovršeno ({confirmations.noOfConfirmations} potvrda)",
-  "1dxXSN": "Započnite",
   "3UgV1b": "Prodaj na podrijetlo",
   "1Lm6gh": "Pogreška pri učitavanju poruka",
   "2vAKrL": "Učitavam...",
@@ -761,13 +798,17 @@
     "_1": "Obavijest"
   },
   "1NaRKF": "Pogledaj sve",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Spojen na",
-  "lGvCt": "ETH adresa",
-  "4CQP5I": "Uredi profil",
-  "2lBtlo": "Settings",
-  "11UGHW": "Moj identitet",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Korisnik bez naziva",
   "2qHaXn": "Snaga profila",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} odbio vašu ponudu na {title}",
   "2nsNrC": "{nameLink} prihvatio vašu ponudu na {title}",
   "3VLvv1": "Transakcija s {nameLink} dovršena za {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Zašto to moram učiniti?",
   "1uKbVV": "O podrijetlu poruka",
   "2tPHpd": "Novčanik za kripto valutu je softverski program koji pohranjuje privatne i javne ključeve i komunicira s raznim blockchainom kako bi korisnicima omogućio slanje i primanje digitalne valute i praćenje njihovog stanja. Ako želite koristiti Bitcoin ili bilo koju drugu kripto valutu, morat ćete imati digitalni novčanik.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "O identitetu na Blockchainu",
   "4o9sVo": "Novčanik za kripto valutu je softverski program koji pohranjuje privatne i javne ključeve i komunicira s raznim blockchainom kako bi korisnicima omogućio slanje i primanje digitalne valute i praćenje njihovog stanja. Ako želite koristiti Bitcoin ili bilo koju drugu kripto valutu, morat ćete imati digitalni novčanik.",
   "1JNI6V": "Saznajte više",
   "3NRLhm": "Što je kripto novčanik?",
   "2HUml2": "Novčanik za kripto valutu je softverski program koji pohranjuje privatne i javne ključeve i komunicira s raznim blockchainom kako bi korisnicima omogućio slanje i primanje digitalne valute i praćenje njihovog stanja. Ako želite koristiti Bitcoin ili bilo koju drugu kripto valutu, morat ćete imati digitalni novčanik.",
   "28APX7": "Vaš unos čeka ...",
-  "1IXSHG": "Čestitamo",
-  "34IDA4": "Uspješno ste aktivirali svoj račun. Sada ste spremni nastaviti svoje putovanje na početnoj tržnici.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Sada ste dovršili sljedeće:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Stvaranje novčanika",
-  "2sG5u1": "Omogućeno slanje poruka",
-  "2ApFEM": "Omogućene su obavijesti na radnoj površini",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Preostali koraci:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Sredite novčanik",
-  "4hOCr3": "Dovršite svoj profil",
+  "jC283": "Povežite kripto novčanik",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Izvor poruke",
   "4aVWeW": "Sinkronizacija porijekla poruka",
   "mmY61": "0 od 2 MetaMask poruka je potpisano",
@@ -853,26 +885,12 @@
   "CagXi": "Nema Web3",
   "2pKTLR": "Slatko! Obavijesti na radnoj površini su uključene :)",
   "XIw7y": "Početak rada",
-  "1p9mMH": "Unesite podatke o svom profilu",
-  "2dpEtI": "Ime",
-  "h7cxv": "Prezime",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} Morate imati sredstva u novčaniku da biste stvorili identitet. Uvijek možete to učiniti kasnije nakon što uplatite novčanik odlaskom na postavke.",
-  "3uPAxx": "Nemate sredstava",
-  "1xCh1J": "Objaviti",
-  "2Np1YB": "Preskoči Za sada",
-  "2RQByv": "Objavljeno",
-  "1QWML6": "privremen",
-  "39z7m5": "uskoro",
-  "1IS4x0": "interaktivni",
-  "3qH7cV": "Ime je obavezno",
-  "2jWTcd": "Izvor Mobile Wallet",
-  "CBV19": "Origin's Mobile Wallet omogućit će vam pohranu kripto valute tako da možete kupiti i prodati na našem DApp-u.",
-  "3Wb2Vz": "Dostupno za iOS i Android",
-  "2nj6ZX": "MetaMask je proširenje preglednika koje će vam omogućiti pristup decentraliziranom webu.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Dostupno za {browser}",
   "29RrPk": "Povežite MetaMask",
-  "jC283": "Povežite kripto novčanik",
   "2lqwoN": "Učitavam...",
   "3UjbU1": "Obavijesti na radnoj površini omogućene su",
   "gLVF0": "postavke",
@@ -888,6 +906,9 @@
   "38WM0A": "Bridge Server",
   "23S1SF": "Poslužitelj za otkrivanje",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Korisnik bez naziva",
