--- a/dapp3/translations/it_IT.json
+++ b/dapp3/translations/it_IT.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Account Twitter verificato",
   "2BpmkI": "Account Google verificato",
   "12mV06": "Telefono verificato",
@@ -85,6 +91,35 @@
     "schema.resumes": "CV",
     "schema.volunteers": "Volontari"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Caricamento...",
+  "1ydkJH": "Continua",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Pubblicare",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Abilita la messaggistica",
   "1KvwDF": "Messaggistica Origin",
   "2XaOyJ": "Informazioni introduttive sull'utilizzo di Origin prima di poter inviare un messaggio a questo utente",
@@ -108,6 +143,7 @@
   "4qkP5F": "Crop",
   "BcfF1": "Rimuovere",
   "3N2LLn": "Il tuo browser non supporta il tag video.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Vendita completata",
   "2sSICu": "Disputa iniziata",
   "1pxzG8": "Sentenza Emessa",
+  "1dxXSN": "Per iniziare",
   "2XVXB5": "Scrivendo nella blockchain.",
   "48sqnA": "Questa operazione potrebbe richiedere un minuto.",
   "3JYttU": "In attesa di conferma.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Aggiorniamo la tua inserzione",
   "12qS4F": "Aggiorna il tipo di annuncio",
   "3HqBJ": "Che tipo di annuncio desideri creare?",
-  "1ydkJH": "Continua",
   "2oRomf": "La categoria è richiesta",
   "tjihf": "Aggiungi un annuncio",
   "3Piqbx": "Pagamento",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "In sospeso",
   "4qOByY": "Guadagnato",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Mostra",
   "4v4xei": "Tutti",
   "2j242e": "Sbloccato",
@@ -521,7 +556,6 @@
   "4FezaJ": "Token guadagnati",
   "2haWvO": "Guadagni totali",
   "1erpVf": "Token guadagnati",
-  "2CPasx": "Caricamento...",
   "2tRIOg": "Nessuna campagna rilevata",
   "2iDrtJ": "Unisciti a me su Origin e guadagna i token Cryptocurrency Origin (OGN). Origin è un nuovo mercato per comprare e vendere con altri utenti. Guadagna Origin Token quando crei il tuo profilo, invita i tuoi amici e compra e vendi sul mercato.",
   "1gCRzk": "Unisciti a me su Origin e guadagna i token Cryptocurrency Origin (OGN). Origin è un nuovo mercato per comprare e vendere con altri utenti. Guadagna Origin Token quando crei il tuo profilo, invita i tuoi amici e compra e vendi sul mercato.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Per iniziare",
   "2pjq9v": "Hai domande?",
   "4BVEan": "Mettiti in contatto",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Partecipa alla Campagna",
   "44Obrh": "Unisciti al nostro {campaignName} per guadagnare gettoni",
   "1JeQU0": "Guadagna OGN completando attività come verificare la tua identità e condividere Origin con i tuoi amici. L'OGN può essere utilizzato in vari modi. L'OGN guadagnato verrà trasferito dopo la fine dello {campaignName}.",
   "4fuMIp": "Per iniziare",
   "2El6Ld": "Chiudi",
   "1R5Tqk": "Accetta i termini",
-  "m0l6": "Iscriviti a Origin",
-  "2EpzBo": "Iscriviti a Origin",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Accetto i termini e le condizioni",
   "2JZUuK": "Paese non idoneo",
   "3ARgQ2": "Oops, {country} non è ammesso",
@@ -629,9 +663,13 @@
   "3d1Uto": "Gli altri utenti sapranno che hai un account Google verificato, ma i dettagli del tuo account non saranno pubblicati sulla blockchain. Non pubblicheremo mai a tuo nome.",
   "FoBDR": "Account Google verificato!",
   "1ZMsNQ": "Successo!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifica il tuo Numero di Telefono",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Inserisci il tuo numero di telefono qui sotto e OriginID ti invierà un codice di verifica via SMS.",
-  "2kSdkz": "Verificando il tuo numero di telefono, autorizzi Origin ad inviarti e-mail occasionali come notifiche sulle tue transazioni.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Inserisci il codice che ti abbiamo inviato qui sotto",
   "OxVwu": "Numero di telefono verificato!",
   "2ocEjm": "Verifica il tuo Account Twitter",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} di 6 conferme",
   "2XqpJE": "Completa ({confirmations.noOfConfirmations} conferme)",
-  "1dxXSN": "Per iniziare",
   "3UgV1b": "Vendi su Origin",
   "1Lm6gh": "Errore durante il caricamento dei messaggi",
   "2vAKrL": "Caricamento...",
@@ -761,13 +798,17 @@
     "_1": "Notifica"
   },
   "1NaRKF": "Vedi tutto",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Collegato al",
-  "lGvCt": "Indirizzo ETH",
-  "4CQP5I": "Modifica il Profilo",
-  "2lBtlo": "Impostazioni",
-  "11UGHW": "La mia Identità",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Utente senza nome",
   "2qHaXn": "Forza del Profilo",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} ha rifiutato la tua offerta per {title}",
   "2nsNrC": "{nameLink} ha accettato la tua offerta per {title}",
   "3VLvv1": "Transazione con {nameLink} finalizzata per {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Perché devo fare questo?",
   "1uKbVV": "Informazioni su Origin Messaging",
   "2tPHpd": "Un portafoglio di criptovaluta è un programma software che memorizza le chiavi private e pubbliche e interagisce con vari blockchain per consentire agli utenti di inviare e ricevere valuta digitale e monitorare il loro equilibrio. Se si desidera utilizzare Bitcoin o qualsiasi altra criptovaluta, è necessario disporre di un portafoglio digitale.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Informazioni su Identity on the Blockchain",
   "4o9sVo": "Un portafoglio di criptovaluta è un programma software che memorizza le chiavi private e pubbliche e interagisce con vari blockchain per consentire agli utenti di inviare e ricevere valuta digitale e monitorare il loro equilibrio. Se si desidera utilizzare Bitcoin o qualsiasi altra criptovaluta, è necessario disporre di un portafoglio digitale.",
   "1JNI6V": "Ulteriori informazioni",
   "3NRLhm": "Cos'è un portafoglio Crypto?",
   "2HUml2": "Un portafoglio di criptovaluta è un programma software che memorizza le chiavi private e pubbliche e interagisce con vari blockchain per consentire agli utenti di inviare e ricevere valuta digitale e monitorare il loro equilibrio. Se si desidera utilizzare Bitcoin o qualsiasi altra criptovaluta, è necessario disporre di un portafoglio digitale.",
   "28APX7": "La tua inserzione sta aspettando ...",
-  "1IXSHG": "Congratulazioni",
-  "34IDA4": "Hai attivato correttamente il tuo account. Ora sei pronto per continuare il tuo viaggio nel Marketplace di origine.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Ora hai completato quanto segue:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Creazione del portafoglio",
-  "2sG5u1": "Messaggistica abilitata",
-  "2ApFEM": "Notifiche desktop abilitate",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Passaggi rimanenti:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Finanzia il tuo portafoglio",
-  "4hOCr3": "Completa il tuo profilo",
+  "jC283": "Collega un portafoglio Crypto",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Messaggistica Origin",
   "4aVWeW": "Origin Synaging Syncing",
   "mmY61": "0 di 2 messaggi MetaMask firmati",
@@ -853,26 +885,12 @@
   "CagXi": "No Web3",
   "2pKTLR": "Dolce! Le notifiche del desktop sono attive :)",
   "XIw7y": "Iniziare",
-  "1p9mMH": "Inserisci le informazioni del tuo profilo",
-  "2dpEtI": "Nome",
-  "h7cxv": "Cognome",
-  "2pz6sX": "Raccontaci qualcosa di te",
-  "3uFhNl": "{=You don't have funds} È necessario disporre di fondi nel portafoglio per creare un'identità. Puoi sempre farlo più tardi dopo aver finanziato il tuo portafoglio andando alle tue impostazioni.",
-  "3uPAxx": "Non hai fondi",
-  "1xCh1J": "Pubblicare",
-  "2Np1YB": "Salta per ora",
-  "2RQByv": "pubblicato",
-  "1QWML6": "provvisorio",
-  "39z7m5": "presto",
-  "1IS4x0": "interattivo",
-  "3qH7cV": "Il nome è obbligatorio",
-  "2jWTcd": "Origin Mobile Wallet",
-  "CBV19": "Il portafoglio mobile di Origin ti consentirà di memorizzare la valuta cripto per poter acquistare e vendere sul nostro DApp.",
-  "3Wb2Vz": "Disponibile per iOS e Android",
-  "2nj6ZX": "MetaMask è un'estensione del browser che ti permetterà di accedere al web decentralizzato.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Disponibile per {browser}",
   "29RrPk": "Connetti MetaMask",
-  "jC283": "Collega un portafoglio Crypto",
   "2lqwoN": "Caricamento...",
   "3UjbU1": "Notifiche del desktop abilitate ✅",
   "gLVF0": "impostazioni",
@@ -888,6 +906,9 @@
   "38WM0A": "Bridge Server",
   "23S1SF": "Discovery Server",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Trattenuto",
   "NrhOS": "Rilasciato",
   "QUO1v": "Importo",
@@ -1044,20 +1065,13 @@
   "2330bB": "Guadagna ancora più OGN quando verifichi i tuoi profili Facebook, Twitter e Airbnb.",
   "1b7Zwb": "Guadagna fino a",
   "29Quwo": "Fatto!",
-  "1tixem": "Passaggio successivo: verifica il tuo numero di telefono",
-  "2k5cTO": "Rafforza ulteriormente il tuo profilo verificando un numero di telefono a 10 cifre valido",
-  "IqnqE": "Verifica per guadagnare",
-  "Ek9Tv": "Continua",
-  "4okJre": "Passaggio successivo: verifica la tua email",
-  "3VMsLo": "Pubblica per salvare le modifiche o continuare con le verifiche",
-  "cjvCD": "Pubblica le modifiche",
   "2MO8B7": "Pubblica le modifiche",
-  "1JLKPg": "Iscriviti per guadagnare token Cryptocurrency Origin (OGN)",
-  "1YFhvm": "Guadagna token completando il tuo profilo.",
-  "3iqW1P": "Iscriviti ora",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Salta",
-  "33tWcy": "Carica una foto e fornisci un nome e una descrizione",
-  "1LH6Qw": "Per iniziare",
   "fs65Z": "Hai modifiche non pubblicate",
   "3O45za": "Promosso da",
   "2jblSi": "Utente senza nome",
