--- a/dapp3/translations/ja_JP.json
+++ b/dapp3/translations/ja_JP.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Twitter のアカウントの認証が完了しました",
   "2BpmkI": "Googleアカウントの認証が完了しました",
   "12mV06": "電話番号の認証を完了しました",
@@ -85,6 +91,35 @@
     "schema.resumes": "レジュメ",
     "schema.volunteers": "ボランティア"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "読込中...",
+  "1ydkJH": "続ける",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "公開する",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "メッセージ機能を有効にする",
   "1KvwDF": "Originメッセージ機能",
   "2XaOyJ": "メッセージを送る前にOriginメッセージを使うための設定を行いましょう",
@@ -108,6 +143,7 @@
   "4qkP5F": "トリミング",
   "BcfF1": "削除",
   "3N2LLn": "お使いのブラウザはビデオタグをサポートしていません。",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "販売が完了しました",
   "2sSICu": "紛争が開始されました",
   "1pxzG8": "裁定が決定しました",
+  "1dxXSN": "はじめに",
   "2XVXB5": "ブロックチェーンへ書き込んでいます",
   "48sqnA": "これには少し時間がかかります。",
   "3JYttU": "承諾を待っています。",
@@ -237,7 +274,6 @@
   "2fdHS3": "出品情報を更新しましょう",
   "12qS4F": "出品タイプを更新",
   "3HqBJ": "どのような出品情報を作成しますか？",
-  "1ydkJH": "続ける",
   "2oRomf": "カテゴリーは必須です",
   "tjihf": "出品情報を掲載する",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "保留中",
   "4qOByY": "収益",
-  "1IZ5ov": "Ok",
   "2kJTBH": "公開する",
   "4v4xei": "すべて",
   "2j242e": "ロック解除済み",
@@ -521,7 +556,6 @@
   "4FezaJ": "獲得したトークン",
   "2haWvO": "総収益",
   "1erpVf": "獲得したトークン",
-  "2CPasx": "読込中...",
   "2tRIOg": "キャンペーンがみつかりません",
   "2iDrtJ": "Originに参加して、Origin暗号通貨トークン（OGN）を獲得してください。 Originは他のユーザーと売買する新しい市場です。あなたのプロフィールを作成し、あなたの友人を招待し、そして市場で売買すると、Originトークンを獲得できます。",
   "1gCRzk": "Originに参加して、Origin暗号通貨トークン（OGN）を獲得してください。 Originは他のユーザーと売買する新しい市場です。あなたのプロフィールを作成し、あなたの友人を招待し、そして市場で売買すると、Originトークンを獲得できます。",
@@ -592,14 +626,14 @@
   "1A0dWH": "はじめに",
   "2pjq9v": "質問がありますか？",
   "4BVEan": "連絡する",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "私たちの {campaignName} に参加してトークンを獲得しましょう",
   "1JeQU0": "本人情報の承認や、友達をOriginに招待すとOGNを獲得できます。 獲得したOGNはさまざまな方法で使用できます。このOGNは {campaignName} の終了後に配布されます.",
   "4fuMIp": "はじめに",
   "2El6Ld": "却下する",
   "1R5Tqk": "利用規約に同意する",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Originに登録する",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "利用規約に同意します",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "おっと、 {country} は対象外です",
@@ -629,9 +663,13 @@
   "3d1Uto": "他のユーザーからは、あなたが承認済みのGoogleアカウントを持っている事がわかります。ですが、あなたのアカウントの詳細は公開されません。また、私たちがあなたに代わって投稿することは決してありません。",
   "FoBDR": "Googleアカウントの認証が完了しました!",
   "1ZMsNQ": "成功!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "あなたの電話番号を確認する",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "下記にあなたの電話番号を入力すると、OriginIDはあなたに確認コードをSMSで送ります。",
-  "2kSdkz": "電話番号を承認することで、あなたはOriginがあなたの取引について通知などを送る事に同意する事になります。",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "以下に送信したコードを入力してください",
   "OxVwu": "電話番号を確認しました。",
   "2ocEjm": "あなたのTwitterアカウントを確認する",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "6回のうち{confirmations.noOfConfirmations} 回の確認",
   "2XqpJE": "完了（{confirmations.noOfConfirmations} 確認）",
-  "1dxXSN": "はじめに",
   "3UgV1b": "原産地で売る",
   "1Lm6gh": "メッセージの読み込みエラー",
   "2vAKrL": "読み込み中...",
@@ -761,13 +798,17 @@
     "_1": "お知らせ"
   },
   "1NaRKF": "全て見る",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "に接続されています",
-  "lGvCt": "ETHアドレス",
-  "4CQP5I": "プロファイル編集",
-  "2lBtlo": "Settings",
-  "11UGHW": "私のアイデンティティ",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "無名のユーザー",
   "2qHaXn": "プロファイル強度",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} は {title}オファーを辞退しました",
   "2nsNrC": "{nameLink} は、 {title}あなたの申し出を受け入れました",
   "3VLvv1": "取引 {nameLink} のための確定 {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "なぜこれをする必要があるのですか？",
   "1uKbVV": "Origin Messagingについて",
   "2tPHpd": "暗号通貨ウォレットは、秘密鍵と公開鍵を格納し、さまざまなブロックチェーンと対話してユーザーがデジタル通貨を送受信し、その残高を監視できるようにするソフトウェアプログラムです。あなたがBitcoinや他の暗号通貨を使いたいのなら、あなたはデジタル財布を持っている必要があるでしょう。",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "ブロックチェーンのアイデンティティについて",
   "4o9sVo": "暗号通貨ウォレットは、秘密鍵と公開鍵を格納し、さまざまなブロックチェーンと対話してユーザーがデジタル通貨を送受信し、その残高を監視できるようにするソフトウェアプログラムです。あなたがBitcoinや他の暗号通貨を使いたいのなら、あなたはデジタル財布を持っている必要があるでしょう。",
   "1JNI6V": "詳細について",
   "3NRLhm": "Crypto Walletとは何ですか？",
   "2HUml2": "暗号通貨ウォレットは、秘密鍵と公開鍵を格納し、さまざまなブロックチェーンと対話してユーザーがデジタル通貨を送受信し、その残高を監視できるようにするソフトウェアプログラムです。あなたがBitcoinや他の暗号通貨を使いたいのなら、あなたはデジタル財布を持っている必要があるでしょう。",
   "28APX7": "あなたのリストは待っています...",
-  "1IXSHG": "おめでとうございます",
-  "34IDA4": "あなたは正常にあなたのアカウントを有効にしました。 Originマーケットプレイスで旅を続ける準備が整いました。",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "これで次の作業が完了しました。",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "財布の作成",
-  "2sG5u1": "メッセージングが有効",
-  "2ApFEM": "デスクトップ通知が有効",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "残りのステップ",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "あなたの財布に資金を供給",
-  "4hOCr3": "あなたのプロフィールを完成させる",
+  "jC283": "暗号ウォレットを接続する",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Originメッセージ機能",
   "4aVWeW": "オリジンメッセージングの同期",
   "mmY61": "0/2メタマスクメッセージが署名されている",
@@ -853,26 +885,12 @@
   "CagXi": "Web3なし",
   "2pKTLR": "甘い！デスクトップ通知はオンです:)",
   "XIw7y": "入門",
-  "1p9mMH": "あなたのプロフィール情報を入力してください",
-  "2dpEtI": "名",
-  "h7cxv": "姓",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} アイデンティティを作成するには財布に資金が必要です。あなたがあなたの設定に行くことによってあなたの財布に資金を供給した後に、あなたはいつでも後でこれをすることができます。",
-  "3uPAxx": "資金がありません",
-  "1xCh1J": "公開する",
-  "2Np1YB": "今のところスキップする",
-  "2RQByv": "公開済み",
-  "1QWML6": "仮",
-  "39z7m5": "まもなく",
-  "1IS4x0": "インタラクティブな",
-  "3qH7cV": "名は必須です",
-  "2jWTcd": "オリジンモバイルウォレット",
-  "CBV19": "Originのモバイルウォレットを使用すると、暗号通貨を保存できるので、DAppで売買することができます。",
-  "3Wb2Vz": "iOSとAndroidで利用可能",
-  "2nj6ZX": "MetaMaskは、分散Webにアクセスできるようにするブラウザ拡張です。",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "{browser}利用可能",
   "29RrPk": "MetaMaskを接続する",
-  "jC283": "暗号ウォレットを接続する",
   "2lqwoN": "読込中...",
   "3UjbU1": "デスクトップ通知を有効にする✅",
   "gLVF0": "設定",
@@ -888,6 +906,9 @@
   "38WM0A": "ブリッジサーバー",
   "23S1SF": "検出サーバー",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Facebook、Twitter、Airbnbのプロフィールを認証すると、さらに多くのOGNを獲得できます。",
   "1b7Zwb": "最大獲得数",
   "29Quwo": "了解！",
-  "1tixem": "次のステップ：電話番号を認証する",
-  "2k5cTO": "有効な10桁の電話番号を認証して、さらにプロフィールを強化しましょう",
-  "IqnqE": "認証すると獲得できます",
-  "Ek9Tv": "続ける",
-  "4okJre": "次のステップ：Eメールアドレスを認証する",
-  "3VMsLo": "変更を保存するため、および認証を続けるには公開してください",
-  "cjvCD": "変更を公開する",
   "2MO8B7": "変更を公開する",
-  "1JLKPg": "Originの暗号資産（OGN）を獲得するために登録しましょう",
-  "1YFhvm": "プロフィールを完了させてトークンを獲得しましょう",
-  "3iqW1P": "今すぐ登録",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "スキップ",
-  "33tWcy": "写真をアップロードして名前と説明を入力してください",
-  "1LH6Qw": "はじめる",
   "fs65Z": "未公開の変更があります",
   "3O45za": "協賛",
   "2jblSi": "名前の無いユーザー",
