--- a/dapp3/translations/ko_KR.json
+++ b/dapp3/translations/ko_KR.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "수락",
   "1gr3xK": "트위터(Twitter) 계정 인증완료",
   "2BpmkI": "구글(Google) 계정 인증완료",
   "12mV06": "전화번호 인증완료",
@@ -85,6 +91,35 @@
     "schema.resumes": "이력서",
     "schema.volunteers": "자원 봉사자"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "로딩중...",
+  "1ydkJH": "계속",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "게시",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "메시지 사용가능",
   "1KvwDF": "오리진 메시징",
   "2XaOyJ": "해당 사용자에게 메세지를 보내기 전에 오리진(Origin) 을 먼저 사용해 보세요.",
@@ -108,6 +143,7 @@
   "4qkP5F": "잘라내기",
   "BcfF1": "제거",
   "3N2LLn": "귀하의 브라우저가 비디오 태그를 지원하지 않습니다.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "판매 완료",
   "2sSICu": "분쟁이 시작되었습니다",
   "1pxzG8": "판결이 이루어졌습니다",
+  "1dxXSN": "시작",
   "2XVXB5": "블록체인에 기록합니다",
   "48sqnA": "이 작업은 약 1 분 정도 소요 될 수 있습니다",
   "3JYttU": "거래 확정을 기다리는 중입니다",
@@ -237,7 +274,6 @@
   "2fdHS3": "당신의 상품 목록을 업데이트 해주세요.",
   "12qS4F": "상품 목록 유형을 업데이트 해주세요.",
   "3HqBJ": "어떤 종류의 상품 목록을 만들고 싶습니까?",
-  "1ydkJH": "계속",
   "2oRomf": "카테고리가 필요합니다.",
   "tjihf": "상품목록 추가",
   "3Piqbx": "지불",
@@ -502,7 +538,6 @@
   "wY0C5": "자세한 설명",
   "4ETL05": "보류중",
   "4qOByY": "획득",
-  "1IZ5ov": "수락",
   "2kJTBH": "보기",
   "4v4xei": "전체",
   "2j242e": "잠금 해제 됨",
@@ -521,7 +556,6 @@
   "4FezaJ": "보유한 토큰",
   "2haWvO": "총량",
   "1erpVf": "보유한 토큰",
-  "2CPasx": "로딩중...",
   "2tRIOg": "현재 진행중인 캠페인이 없습니다.",
   "2iDrtJ": "오리진에 가입하고, 오리진 암호화폐 토큰(OGN) 을 받아보세요. 오리진은 참여자들이 직접 물건을 사고 팔수 있는 새로운 형태의 마켓 플레이스 입니다. 프로필을 생성하고, 친구들 초대하고, 오리진 마켓플레이스에서 물건을 사고 파는 활동에 참여한 후 오리진 토큰을 획득하세요.",
   "1gCRzk": "오리진에 가입하고, 오리진 암호화폐 토큰(OGN) 을 받아보세요. 오리진은 참여자들이 직접 물건을 사고 팔수 있는 새로운 형태의 마켓 플레이스 입니다. 프로필을 생성하고, 친구들 초대하고, 오리진 마켓플레이스에서 물건을 사고 파는 활동에 참여한 후 오리진 토큰을 획득하세요.",
@@ -592,14 +626,14 @@
   "1A0dWH": "시작",
   "2pjq9v": "질문이 있으세요?",
   "4BVEan": "연락 하기",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "캠페인 참여하기",
   "44Obrh": "오리진 {campaignName} 캠페인에 참여하시고, 토큰을 얻으세요.",
   "1JeQU0": "본인 인증 절차를 완료하거나 친구들을 오리진에 초대하는 활동을 완료한 후 OGN을 획득하세요. OGN은 다양한 방법으로 사용할 수 있습니다. {campaignName} 이 종료된 후에, OGN을 얻을 수 있습니다.",
   "4fuMIp": "시작",
   "2El6Ld": "해제",
   "1R5Tqk": "약관 동의",
-  "m0l6": "지금 오리진(Origin) 에 가입하세요",
-  "2EpzBo": "오늘 오리진(Origin) 에 가입하세요",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "저는 이용 약관에 동의합니다",
   "2JZUuK": "사용 불가능 국가",
   "3ARgQ2": "죄송합니다. {country} 해당 국가에서는 사용할 수 없습니다.",
@@ -629,9 +663,13 @@
   "3d1Uto": "다른 사용자는 당신의 구글 계정이 인증되었음을 알게되지만, 계정에 세부 정보는 블록 체인에 게제되지 않습니다. 오리진은 절대 해당 정보를 블록체인 상에 게재하지 않습니다.",
   "FoBDR": "구글(Google) 계정 인증완료!",
   "1ZMsNQ": "성공!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "전화 번호 인증",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "아래에 전화 번호를 입력하면 OriginID에서 SMS를 통해 인증 코드를 보내드립니다.",
-  "2kSdkz": "당신의 휴대 전화 인증을 완료함으로써, 당신은 오리진이 당신에게 주기적으로 거래와 관련한 알림 이메일을 보낼 수 있도록 허용합니다.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "하단에 오리진에서 받은 코드를 입력해주세요.",
   "OxVwu": "인증된 전화번호!",
   "2ocEjm": "트위터(Twitter) 계정 인증",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "6 건 중 {confirmations.noOfConfirmations}",
   "2XqpJE": "완료 ({confirmations.noOfConfirmations} 확인)",
-  "1dxXSN": "시작",
   "3UgV1b": "오리진에서 판매",
   "1Lm6gh": "메시지를 불러오는 중 오류가 발생했습니다",
   "2vAKrL": "로딩중...",
@@ -761,13 +798,17 @@
     "_1": "알림"
   },
   "1NaRKF": "전체 보기",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "에 연결됨",
-  "lGvCt": "ETH 주소",
-  "4CQP5I": "프로필 편집",
-  "2lBtlo": "설정",
-  "11UGHW": "본인 인증",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "익명 사용자",
   "2qHaXn": "프로필 영향력",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} 가 당신의 제안을 거절 {title} 했습니다.",
   "2nsNrC": "{nameLink} 가 당신의 제안을 받아 {title} 들였습니다.",
   "3VLvv1": "{nameLink} 와의 최종 거래가 {title} 건으로 처리되었습니다.",
@@ -785,25 +826,16 @@
   "3XLNbf": "왜 제가 이것을 해야합니까?",
   "1uKbVV": "오리진 메시징에 대해",
   "2tPHpd": "암호화폐 지갑은 개인 및 공개 키를 저장하고, 다양한 블록 체인과 상호 작용하여 사용자가 디지털 통화를 주고 받으며 자신의 잔액을 확인할 수 있도록 하는 소프트웨어 프로그램입니다. 비트코인 또는 다른 암호 화폐를 사용하기 위하여 디지털 지갑이 필요합니다.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "블록 체인에서의 본인인증",
   "4o9sVo": "cryptocurrency wallet은 개인 및 공개 키를 저장하고 다양한 블록 체인과 상호 작용하여 사용자가 디지털 통화를 보내고 받거나 균형을 모니터링 할 수있게 해주는 소프트웨어 프로그램입니다. Bitcoin 또는 다른 암호 화를 사용하려면 디지털 지갑이 있어야합니다.",
   "1JNI6V": "더 알아보기",
   "3NRLhm": "암호화 지갑(Crypto Wallet) 이란 무엇입니까?",
   "2HUml2": "암호화폐 지갑은 개인 및 공개 키를 저장하고, 다양한 블록 체인과 상호 작용하여 사용자가 디지털 통화를 주고 받으며 자신의 잔액을 확인할 수 있도록 하는 소프트웨어 프로그램입니다. 비트코인 또는 다른 암호 화폐를 사용하기 위하여 디지털 지갑이 필요합니다.",
   "28APX7": "당신의 상품 목록이 대기 중입니다....",
-  "1IXSHG": "축하합니다!",
-  "34IDA4": "당신의 계정의 성공적으로 활성화되었습니다. 이제 오리진 마켓플레이스를 사용하여, 멋진 거래들을 성사시켜보세요.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "당신은 다음과 같은 단계들을 완료하였습니다:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "지갑 생성",
-  "2sG5u1": "메시징 사용가능",
-  "2ApFEM": "컴퓨터 바탕 화면 알림 사용가능",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "추가적으로 완료해야 할 단계:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "지갑을 충전하세요.",
-  "4hOCr3": "프로필 작성을 완료해주세요.",
+  "jC283": "암호화폐 지갑과 연동",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "오리진 메시징",
   "4aVWeW": "오리진 메시징 동기화",
   "mmY61": "2 개의 메타마스크(MetaMask) 메시지 중 0 개가 서명 되었습니다.",
@@ -853,26 +885,12 @@
   "CagXi": "웹 3 없음",
   "2pKTLR": "아주 좋아요! 이제 컴퓨터 바탕화면 알림이 작동합니다^^",
   "XIw7y": "시작",
-  "1p9mMH": "프로필 정보를 입력해주세요.",
-  "2dpEtI": "이름",
-  "h7cxv": "성",
-  "2pz6sX": "자기소개를 해주세요",
-  "3uFhNl": "{=You don't have funds} 본인인증을 완료하기 위해서는 지갑에 돈이 있어야합니다. 당신은 당신의 기기에서의 설정으로 가서 당신의 지갑에 돈을 충전한 후에 언제든지 인증을 완료할 수 있습니다.",
-  "3uPAxx": "자금이 없습니다.",
-  "1xCh1J": "게시",
-  "2Np1YB": "우선 다음 단계로 이동",
-  "2RQByv": "게시완료",
-  "1QWML6": "임시적인",
-  "39z7m5": "곧",
-  "1IS4x0": "상호 작용하는",
-  "3qH7cV": "이름이 필요합니다.",
-  "2jWTcd": "오리진 모바일 지갑",
-  "CBV19": "오리진 모바일 지갑에 암호화폐를 저장한 후, 댑에서 구매 또는 판매를 할 수 있습니다.",
-  "3Wb2Vz": "iOS 및 Android에서 사용 가능",
-  "2nj6ZX": "메타마스크(MetaMask) 는 탈 중앙화된 웹에 접근 할 수 있도록 해주는 브라우저 확장 프로그램입니다.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "{browser} 사용 가능",
   "29RrPk": "메타 마스크(MetaMask) 연결",
-  "jC283": "암호화폐 지갑과 연동",
   "2lqwoN": "로딩중...",
   "3UjbU1": "바탕 화면 알림 활성화 됨",
   "gLVF0": "설정",
@@ -888,6 +906,9 @@
   "38WM0A": "연결 서버",
   "23S1SF": "검색 서버",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "유지함(Held)",
   "NrhOS": "출시 됨",
   "QUO1v": "양",
@@ -1044,20 +1065,13 @@
   "2330bB": "페이스북(Facebook), 트위터(Twitter) 및 에어비엔비(Airbnb) 프로필을 인증절차를 완료하고, 더 많은 OGN을 획득해보세요",
   "1b7Zwb": "최대 획득",
   "29Quwo": "확인!",
-  "1tixem": "다음 단계: 전화번호 인증",
-  "2k5cTO": "유효한 10자리 전화번호를 인증하여 프로필을 더욱 강화시킬수 있습니다.",
-  "IqnqE": "획득 확인",
-  "Ek9Tv": "계속",
-  "4okJre": "다음 단계: 이메일 인증",
-  "3VMsLo": "수정 사항에 대한 내용을 저장하거나 인증절차를 계속 진행해주세요",
-  "cjvCD": "수정 사항 게시",
   "2MO8B7": "수정 사항 게시",
-  "1JLKPg": "지금 가입하시고 오리진 토큰(OGN)을 얻어가세요.",
-  "1YFhvm": "프로필 작성을 완료한 후, 토큰을 얻어보세요.",
-  "3iqW1P": "지금 참여하기",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "건너뛰기",
-  "33tWcy": "프로필 사진을 업로드하고 이름과 자기 소개를 작성해주세요",
-  "1LH6Qw": "시작",
   "fs65Z": "수정 사항에 대한 내용을 게시하지 않았습니다.",
   "3O45za": "Powered by",
   "2jblSi": "익명 사용자",
