--- a/dapp3/translations/ru_RU.json
+++ b/dapp3/translations/ru_RU.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Хорошо",
   "1gr3xK": "Аккаунт в Твиттере подтвержден",
   "2BpmkI": "Аккаунт Google подтвержден",
   "12mV06": "Телефон проверен",
@@ -85,6 +91,35 @@
     "schema.resumes": "Резюме",
     "schema.volunteers": "Волонтеры"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Загрузка...",
+  "1ydkJH": "Продолжить",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Публиковать",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Вкл. сообщения",
   "1KvwDF": "Происхождение сообщений",
   "2XaOyJ": "Начните использовать Origin, прежде чем отправить этому пользователю сообщение",
@@ -108,6 +143,7 @@
   "4qkP5F": "урожай",
   "BcfF1": "Удалить",
   "3N2LLn": "Ваш браузер не поддерживает видео тег.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Продажа завершена",
   "2sSICu": "Спор начат",
   "1pxzG8": "Решение вынесено",
+  "1dxXSN": "Начать",
   "2XVXB5": "Запись в блокчейн.",
   "48sqnA": "Это может занять минуту.",
   "3JYttU": "Ожидание подтверждения.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Давайте обновим ваш список",
   "12qS4F": "Обновить тип списка",
   "3HqBJ": "Объявление какого типа вы хотите создать?",
-  "1ydkJH": "Продолжить",
   "2oRomf": "Категория обязательна",
   "tjihf": "Добавить объявление",
   "3Piqbx": "Оплата",
@@ -502,7 +538,6 @@
   "wY0C5": "Больше деталей",
   "4ETL05": "Ожидающие",
   "4qOByY": "заработанный",
-  "1IZ5ov": "Хорошо",
   "2kJTBH": "Показать",
   "4v4xei": "Все",
   "2j242e": "Разблокированы",
@@ -521,7 +556,6 @@
   "4FezaJ": "Жетоны заработаны",
   "2haWvO": "Общий заработок",
   "1erpVf": "Заработано токенов",
-  "2CPasx": "Загрузка...",
   "2tRIOg": "Кампании не найдены",
   "2iDrtJ": "Присоединяйтесь ко мне на Origin и зарабатывайте токены криптовалюты Origin (OGN). Origin - это новая торговая площадка для покупки и продажи с другими пользователями. Зарабатывайте токены Origin при создании своего профиля, приглашении друзей, покупке и продаже на торговой площадке.",
   "1gCRzk": "Присоединяйтесь ко мне на Origin и зарабатывайте токены криптовалюты Origin (OGN). Origin - это новая торговая площадка для покупки и продажи с другими пользователями. Зарабатывайте токены Origin при создании своего профиля, приглашении друзей, покупке и продаже на торговой площадке.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Начать",
   "2pjq9v": "Есть вопросы?",
   "4BVEan": "Связаться",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Присоединиться к кампании",
   "44Obrh": "Присоединяйтесь к нашим {campaignName} чтобы заработать токены",
   "1JeQU0": "Вы можете зарабатывать OGN выполняя задания (например, как верификация личности) и приглашая друзей в Origin. OGN может быть использован различными способами. Заработанные OGN будут отправлены после окончания {campaignName}.",
   "4fuMIp": "Начать",
   "2El6Ld": "Отмена",
   "1R5Tqk": "Принять условия",
-  "m0l6": "Зарегистрируйтесь на Origin",
-  "2EpzBo": "Зарегистрируйтесь на Origin",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Я принимаю правила и условия",
   "2JZUuK": "Страна недоступна",
   "3ARgQ2": "К сожалению, {country} не имеет права",
@@ -629,9 +663,13 @@
   "3d1Uto": "Другие пользователи будут знать, что у вас есть подтвержденная учетная запись Google, но данные вашей учетной записи не будут записаны в блокчейн. Мы никогда не будем публиковать их от вашего имени.",
   "FoBDR": "Аккаунт Google подтвержден!",
   "1ZMsNQ": "Успех!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Проверьте свой номер телефона",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Введите свой номер телефона ниже, и OriginID отправит вам код подтверждения с помощью SMS",
-  "2kSdkz": "Подтвердив свой номер телефона, вы даете разрешение Origin отправлять вам случайные электронные письма, например уведомления о ваших транзакциях.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Введите код, который мы отправили вам ниже",
   "OxVwu": "Номер телефона подтвержден!",
   "2ocEjm": "Подтвердите свою учетную запись Twitter",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} из 6 подтверждений",
   "2XqpJE": "Завершено ({confirmations.noOfConfirmations} подтверждений)",
-  "1dxXSN": "Начать",
   "3UgV1b": "Продать на Происхождение",
   "1Lm6gh": "Ошибка при загрузке сообщений",
   "2vAKrL": "Loading ...",
@@ -761,13 +798,17 @@
     "_1": "уведомление"
   },
   "1NaRKF": "Посмотреть все",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Соединен с",
-  "lGvCt": "ETH Адрес",
-  "4CQP5I": "Редактировать профиль",
-  "2lBtlo": "Настройки",
-  "11UGHW": "Моя личность",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Безымянный пользователь",
   "2qHaXn": "Сила профиля",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} отклонил ваше предложение {title}",
   "2nsNrC": "{nameLink} приняли ваше предложение {title}",
   "3VLvv1": "Сделка с {nameLink} завершена за {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Зачем мне это делать?",
   "1uKbVV": "О происхождении сообщений",
   "2tPHpd": "Криптовалютный кошелек - это программное обеспечение, которое хранит закрытые и открытые ключи и взаимодействует с различными цепочками блоков, чтобы пользователи могли отправлять и получать цифровую валюту и контролировать свой баланс. Если вы хотите использовать Биткойн или любую другую криптовалюту, вам понадобится цифровой кошелек.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Об идентичности на блокчейне",
   "4o9sVo": "Криптовалютный кошелек - это программное обеспечение, которое хранит закрытые и открытые ключи и взаимодействует с различными цепочками блоков, чтобы пользователи могли отправлять и получать цифровую валюту и контролировать свой баланс. Если вы хотите использовать Биткойн или любую другую криптовалюту, вам понадобится цифровой кошелек.",
   "1JNI6V": "Узнать больше",
   "3NRLhm": "Что такое Crypto Wallet?",
   "2HUml2": "Криптовалютный кошелек - это программное обеспечение, которое хранит закрытые и открытые ключи и взаимодействует с различными цепочками блоков, чтобы пользователи могли отправлять и получать цифровую валюту и контролировать свой баланс. Если вы хотите использовать Биткойн или любую другую криптовалюту, вам понадобится цифровой кошелек.",
   "28APX7": "Ваше объявление ждет ...",
-  "1IXSHG": "Поздравляю",
-  "34IDA4": "Вы успешно активировали свою учетную запись. Теперь вы готовы продолжить свое путешествие на Origin Marketplace.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Вы завершили следующее:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Создание кошелька",
-  "2sG5u1": "Обмен сообщениями включен",
-  "2ApFEM": "Уведомления на рабочем столе включены",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Остальные шаги:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Пополнить свой кошелек",
-  "4hOCr3": "Заполните свой профиль",
+  "jC283": "Подключите Crypto Wallet",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Происхождение сообщений",
   "4aVWeW": "Синхронизация исходных сообщений",
   "mmY61": "0 из 2 сообщений MetaMask подписано",
@@ -853,26 +885,12 @@
   "CagXi": "Нет Web3",
   "2pKTLR": "Милая! Настольные уведомления включены :)",
   "XIw7y": "Начиная",
-  "1p9mMH": "Введите информацию вашего профиля",
-  "2dpEtI": "Имя",
-  "h7cxv": "Фамилия",
-  "2pz6sX": "Расскажите немного о себе",
-  "3uFhNl": "{=You don't have funds} Вам нужно иметь средства в своем кошельке для создания личности. Вы всегда можете сделать это позже, когда пополните свой кошелек, перейдя в настройки.",
-  "3uPAxx": "У вас нет средств",
-  "1xCh1J": "Публиковать",
-  "2Np1YB": "Пропустить сейчас",
-  "2RQByv": "опубликованный",
-  "1QWML6": "предварительный",
-  "39z7m5": "скоро",
-  "1IS4x0": "интерактивный",
-  "3qH7cV": "Имя обязательно",
-  "2jWTcd": "Origin Мобильный кошелек",
-  "CBV19": "Мобильный кошелек Origin позволит вам хранить криптовалюту, чтобы вы могли покупать и продавать на нашем DApp.",
-  "3Wb2Vz": "Доступно для iOS и Android",
-  "2nj6ZX": "MetaMask - это расширение для браузера, которое позволит вам получить доступ к децентрализованной сети.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Доступно для {browser}",
   "29RrPk": "Подключите MetaMask",
-  "jC283": "Подключите Crypto Wallet",
   "2lqwoN": "Загрузка...",
   "3UjbU1": "Уведомления на рабочем столе включены ✅",
   "gLVF0": "настройки",
@@ -888,6 +906,9 @@
   "38WM0A": "Сетевой мост",
   "23S1SF": "Discovery Server",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Проведён",
   "NrhOS": "Выпущен",
   "QUO1v": "Количество",
@@ -1044,20 +1065,13 @@
   "2330bB": "Зарабатывайте еще больше OGN, подключая свои профили в Facebook, Twitter и Airbnb.",
   "1b7Zwb": "Заработайте до",
   "29Quwo": "Готово!",
-  "1tixem": "Следующий шаг: подтвердите свой номер телефона",
-  "2k5cTO": "Обеспечьте еще большую безопасность своего профиля, подтвердив действующий 10-значный номер телефона",
-  "IqnqE": "Подтвердите, чтобы заработать",
-  "Ek9Tv": "Продолжить",
-  "4okJre": "Следующий шаг: Подтвердите свою электронную почту",
-  "3VMsLo": "Опубликуйте, чтобы сохранить изменения или продолжите проверку",
-  "cjvCD": "Публичные изменения",
   "2MO8B7": "Публичные изменения",
-  "1JLKPg": "Вступайте, чтобы заработать токены криптовалюты Origin (OGN)",
-  "1YFhvm": "Заработайте токены, заполнив свой профиль.",
-  "3iqW1P": "Вступайте сейчас",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Пропустить",
-  "33tWcy": "Загрузите фото и укажите свое имя и краткую информацию о себе",
-  "1LH6Qw": "Начать",
   "fs65Z": "У вас есть неопубликованные изменения",
   "3O45za": "При поддержке",
   "2jblSi": "Безымянный пользователь",
