--- a/dapp3/translations/tr_TR.json
+++ b/dapp3/translations/tr_TR.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Twitter Hesabı Doğrulandı",
   "2BpmkI": "Google Hesabı Doğrulandı",
   "12mV06": "Telefon Onaylandı",
@@ -85,6 +91,35 @@
     "schema.resumes": "Özgeçmişler",
     "schema.volunteers": "Gönüllüler"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Yükleniyor...",
+  "1ydkJH": "Devam et",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Yayınla",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Mesajlaşmayı Etkinleştir",
   "1KvwDF": "Kökeni Mesajlaşma",
   "2XaOyJ": "Bu kullanıcıya mesaj göndermeden önce Origin'i kullanmaya başlayın",
@@ -108,6 +143,7 @@
   "4qkP5F": "ekin",
   "BcfF1": "Kaldır",
   "3N2LLn": "Tarayıcınız video etiketini desteklemiyor.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Satışı Tamamlandı",
   "2sSICu": "Anlaşmazlık Başladı",
   "1pxzG8": "Yapılan Karar",
+  "1dxXSN": "Başlamak",
   "2XVXB5": "Blockchain'e yazıyorum.",
   "48sqnA": "Bu bir dakika sürebilir.",
   "3JYttU": "Onay bekliyor.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Girişinizi güncelleyelim",
   "12qS4F": "Liste türünü güncelle",
   "3HqBJ": "Ne tür bir giriş oluşturmak istersiniz?",
-  "1ydkJH": "Devam et",
   "2oRomf": "Kategori gerekli",
   "tjihf": "İlan Ekle",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "kadar",
   "4qOByY": "Kazanılan",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Jeton kazanıldı",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Yükleniyor...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Origin'de bana katıl ve Origin cryptocurrency belirteçlerini (OGN) kazan. Origin, diğer kullanıcılarla alım satım yapmak için yeni bir pazardır. Profilinizi oluşturduğunuzda, arkadaşlarınızı davet ettiğinizde ve pazarda satın alıp sattığınızda, Origin jetonu kazanın.",
   "1gCRzk": "Origin'de bana katıl ve Origin cryptocurrency belirteçlerini (OGN) kazan. Origin, diğer kullanıcılarla alım satım yapmak için yeni bir pazardır. Profilinizi oluşturduğunuzda, arkadaşlarınızı davet ettiğinizde ve pazarda satın alıp sattığınızda, Origin jetonu kazanın.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Başlamak",
   "2pjq9v": "Sorularım var?",
   "4BVEan": "Temasta olmak",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Jeton kazanmak için {campaignName} grubumuza katılın",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Başlamak",
   "2El6Ld": "Reddet",
   "1R5Tqk": "Şartları kabul et",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Menşe İçin Kaydolun",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Ben şartları ve koşulları kabul ediyorum",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Hata, {country} uygun değil",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Telefon numaranızı doğrulayın",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Telefon numaranızı aşağıya girin, OriginID size SMS yoluyla bir doğrulama kodu gönderir.",
-  "2kSdkz": "Telefon numaranızı doğrulayarak, Origin'e işlemlerinizle ilgili bildirimler gibi ara sıra e-postalar gönderme izni verirsiniz.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Size gönderdiğimiz kodu aşağıya girin",
   "OxVwu": "Telefon numarası doğrulandı!",
   "2ocEjm": "Twitter Hesabınızı Doğrulayın",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "6 onaydan {confirmations.noOfConfirmations}",
   "2XqpJE": "Tamamlandı ({confirmations.noOfConfirmations} onay)",
-  "1dxXSN": "Başlamak",
   "3UgV1b": "Menşei ile Sat",
   "1Lm6gh": "Mesajlar yüklenirken hata oluştu",
   "2vAKrL": "Yükleniyor...",
@@ -761,13 +798,17 @@
     "_1": "Bildirim"
   },
   "1NaRKF": "Hepsini gör",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Bağlı",
-  "lGvCt": "ETH Adresi",
-  "4CQP5I": "Profili Düzenle",
-  "2lBtlo": "Settings",
-  "11UGHW": "Kimliğim",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Adsız Kullanıcı",
   "2qHaXn": "Profil Gücü",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} , teklifinizi reddetti {title}",
   "2nsNrC": "{nameLink} teklifinizi {title}kabul etti",
   "3VLvv1": "{nameLink} ile işlem {title}için sonuçlandı",
@@ -785,25 +826,16 @@
   "3XLNbf": "Bunu neden yapmam gerekiyor?",
   "1uKbVV": "Origin Mesajlaşma Hakkında",
   "2tPHpd": "Şifreli para birimi cüzdanı, özel ve genel anahtarları saklayan ve kullanıcıların dijital para birimi gönderip almalarını ve bakiyelerini izlemelerini sağlamak için çeşitli blok zinciri ile etkileşime giren bir yazılım programıdır. Bitcoin veya başka bir cryptocurrency kullanmak istiyorsanız, dijital bir cüzdanınız olması gerekir.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Blockchain Üzerindeki Kimlik Hakkında",
   "4o9sVo": "Şifreli para birimi cüzdanı, özel ve genel anahtarları saklayan ve kullanıcıların dijital para birimi gönderip almalarını ve bakiyelerini izlemelerini sağlamak için çeşitli blok zinciri ile etkileşime giren bir yazılım programıdır. Bitcoin veya başka bir cryptocurrency kullanmak istiyorsanız, dijital bir cüzdanınız olması gerekir.",
   "1JNI6V": "Daha fazla bilgi edin",
   "3NRLhm": "Kripto Cüzdanı Nedir?",
   "2HUml2": "Şifreli para birimi cüzdanı, özel ve genel anahtarları saklayan ve kullanıcıların dijital para birimi gönderip almalarını ve bakiyelerini izlemelerini sağlamak için çeşitli blok zinciri ile etkileşime giren bir yazılım programıdır. Bitcoin veya başka bir cryptocurrency kullanmak istiyorsanız, dijital bir cüzdanınız olması gerekir.",
   "28APX7": "Girişiniz bekliyor ...",
-  "1IXSHG": "Tebrikler",
-  "34IDA4": "Hesabınızı başarıyla etkinleştirdiniz. Artık Origin Marketplace'teki seyahatinize devam etmeye hazırsınız.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Şimdi aşağıdakileri tamamladınız:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Cüzdan Oluşturma",
-  "2sG5u1": "Mesajlaşma Etkin",
-  "2ApFEM": "Masaüstü Bildirimleri Etkin",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Kalan adımlar:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Cüzdanına para yatır",
-  "4hOCr3": "Profilinizi tamamlayın",
+  "jC283": "Bir Kripto Cüzdanı Bağlayın",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Kökeni Mesajlaşma",
   "4aVWeW": "Menşe Mesajlaşma Senkronizasyonu",
   "mmY61": "2/0 MetaMask mesajı imzalandı",
@@ -853,26 +885,12 @@
   "CagXi": "Web3 Yok",
   "2pKTLR": "Tatlı! Masaüstü bildirimleri açık :)",
   "XIw7y": "Başlamak",
-  "1p9mMH": "Profil Bilgilerinizi Girin",
-  "2dpEtI": "İsim",
-  "h7cxv": "Soyadı",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} Kimlik oluşturmak için cüzdanınızda para olması gerekir. Cüzdanınıza para yatırdıktan sonra ayarlarınıza giderek her zaman bunu yapabilirsiniz.",
-  "3uPAxx": "Paran yok",
-  "1xCh1J": "Yayınla",
-  "2Np1YB": "Şimdilik geç",
-  "2RQByv": "yayınlanan",
-  "1QWML6": "geçici",
-  "39z7m5": "yakında",
-  "1IS4x0": "interaktif",
-  "3qH7cV": "İlk isim gerekli",
-  "2jWTcd": "Origin Mobil Cüzdan",
-  "CBV19": "Origin'in Mobil Cüzdanı, DAP'lerimizden satın almak ve satmak için kripto para birimi depolamanıza izin verecektir.",
-  "3Wb2Vz": "İOS ve Android için kullanılabilir",
-  "2nj6ZX": "MetaMask, merkezi olmayan web'e erişmenizi sağlayan bir tarayıcı uzantısıdır.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "{browser}",
   "29RrPk": "MetaMask Bağlan",
-  "jC283": "Bir Kripto Cüzdanı Bağlayın",
   "2lqwoN": "Yükleniyor...",
   "3UjbU1": "Masaüstü bildirimleri etkin ✅",
   "gLVF0": "Ayarlar",
@@ -888,6 +906,9 @@
   "38WM0A": "Köprü Sunucusu",
   "23S1SF": "Keşif Sunucusu",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Adsız Kullanıcı",
