--- a/dapp3/translations/vi_VN.json
+++ b/dapp3/translations/vi_VN.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Tài khoản Twitter đã được xác minh",
   "2BpmkI": "Tài khoản Google đã được xác minh",
   "12mV06": "Điện thoại đã được xác minh",
@@ -85,6 +91,35 @@
     "schema.resumes": "Sơ yếu lý lịch",
     "schema.volunteers": "Tình nguyện viên"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Đang tải...",
+  "1ydkJH": "Tiếp tục",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Công bố",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Bật nhắn tin",
   "1KvwDF": "Tin nhắn gốc",
   "2XaOyJ": "Bắt đầu sử dụng Origin trước khi bạn có thể gửi tin nhắn cho người dùng này",
@@ -108,6 +143,7 @@
   "4qkP5F": "Mùa vụ",
   "BcfF1": "Tẩy",
   "3N2LLn": "Trình duyệt của bạn không hỗ trợ thẻ video.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Đã hoàn thành giao dịch",
   "2sSICu": "Đã bắt đầu tranh chấp",
   "1pxzG8": "Phán quyết đã được thực hiện",
+  "1dxXSN": "Bắt đầu",
   "2XVXB5": "Viết lên blockchain.",
   "48sqnA": "Điều này có thể mất một phút.",
   "3JYttU": "Đang chờ xác nhận.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Hãy cập nhật danh sách của bạn",
   "12qS4F": "Cập nhật loại danh sách",
   "3HqBJ": "Bạn muốn tạo loại danh sách nào?",
-  "1ydkJH": "Tiếp tục",
   "2oRomf": "Danh mục là bắt buộc",
   "tjihf": "Thêm một danh sách",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "Đang chờ xử lý",
   "4qOByY": "Kiếm được",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Mã thông báo kiếm được",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Đang tải...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Tham gia cùng tôi trên Origin và kiếm mã thông báo tiền điện tử Origin (OGN). Origin là một thị trường mới để mua và bán với những người dùng khác. Kiếm mã thông báo Origin khi bạn tạo hồ sơ, mời bạn bè và mua và bán trên thị trường.",
   "1gCRzk": "Tham gia cùng tôi trên Origin và kiếm mã thông báo tiền điện tử Origin (OGN). Origin là một thị trường mới để mua và bán với những người dùng khác. Kiếm mã thông báo Origin khi bạn tạo hồ sơ, mời bạn bè và mua và bán trên thị trường.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Bắt đầu",
   "2pjq9v": "Có một vài câu hỏi?",
   "4BVEan": "Liên lạc",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Tham gia {campaignName} của chúng tôi để kiếm mã thông báo",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Bắt đầu",
   "2El6Ld": "Bỏ qua",
   "1R5Tqk": "Chấp nhận các điều khoản",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Đăng ký xuất xứ",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Tôi chấp nhận các điều khoản và điều kiện",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Rất tiếc, {country} không đủ điều kiện",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Xác minh số điện thoại của bạn",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Nhập số điện thoại của bạn dưới đây và OriginID sẽ gửi cho bạn mã xác minh qua SMS.",
-  "2kSdkz": "Bằng cách xác minh số điện thoại của bạn, bạn cấp quyền Origin để gửi cho bạn các email không thường xuyên như thông báo về các giao dịch của bạn.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Nhập mã chúng tôi đã gửi cho bạn dưới đây",
   "OxVwu": "Số điện thoại đã được xác minh!",
   "2ocEjm": "Xác minh tài khoản Twitter của bạn",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} trên 6 xác nhận",
   "2XqpJE": "Hoàn thành ({confirmations.noOfConfirmations} xác nhận)",
-  "1dxXSN": "Bắt đầu",
   "3UgV1b": "Bán trên xuất xứ",
   "1Lm6gh": "Lỗi tải tin nhắn",
   "2vAKrL": "Tải...",
@@ -761,13 +798,17 @@
     "_1": "Thông báo"
   },
   "1NaRKF": "Xem tất cả",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Kết nối với",
-  "lGvCt": "Địa chỉ ETH",
-  "4CQP5I": "Chỉnh sửa hồ sơ",
-  "2lBtlo": "Settings",
-  "11UGHW": "Danh tính của tôi",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Người dùng giấu tên",
   "2qHaXn": "Sức mạnh hồ sơ",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} từ chối lời đề nghị của bạn vào ngày {title}",
   "2nsNrC": "{nameLink} chấp nhận đề nghị của bạn trên {title}",
   "3VLvv1": "Giao dịch với {nameLink} hoàn thành cho {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Tại sao tôi cần phải làm điều này?",
   "1uKbVV": "Giới thiệu về tin nhắn gốc",
   "2tPHpd": "Ví tiền điện tử là một chương trình phần mềm lưu trữ khóa riêng và công khai và tương tác với nhiều blockchain khác nhau để cho phép người dùng gửi và nhận tiền kỹ thuật số và theo dõi số dư của họ. Nếu bạn muốn sử dụng Bitcoin hoặc bất kỳ loại tiền điện tử nào khác, bạn sẽ cần phải có ví kỹ thuật số.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Về danh tính trên Blockchain",
   "4o9sVo": "Ví tiền điện tử là một chương trình phần mềm lưu trữ khóa riêng và công khai và tương tác với nhiều blockchain khác nhau để cho phép người dùng gửi và nhận tiền kỹ thuật số và theo dõi số dư của họ. Nếu bạn muốn sử dụng Bitcoin hoặc bất kỳ loại tiền điện tử nào khác, bạn sẽ cần phải có ví kỹ thuật số.",
   "1JNI6V": "Tìm hiểu thêm",
   "3NRLhm": "Ví tiền điện tử là gì?",
   "2HUml2": "Ví tiền điện tử là một chương trình phần mềm lưu trữ khóa riêng và công khai và tương tác với nhiều blockchain khác nhau để cho phép người dùng gửi và nhận tiền kỹ thuật số và theo dõi số dư của họ. Nếu bạn muốn sử dụng Bitcoin hoặc bất kỳ loại tiền điện tử nào khác, bạn sẽ cần phải có ví kỹ thuật số.",
   "28APX7": "Danh sách của bạn đang chờ ...",
-  "1IXSHG": "Xin chúc mừng",
-  "34IDA4": "Bạn đã kích hoạt thành công tài khoản của mình. Bây giờ bạn đã sẵn sàng để tiếp tục hành trình của mình trong Thị trường Xuất xứ.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Bây giờ bạn đã hoàn thành như sau:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Tạo ví",
-  "2sG5u1": "Đã bật tin nhắn",
-  "2ApFEM": "Thông báo trên màn hình đã bật",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Các bước còn lại:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Tài trợ ví của bạn",
-  "4hOCr3": "Hoàn thành hồ sơ của bạn",
+  "jC283": "Kết nối ví tiền điện tử",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Tin nhắn gốc",
   "4aVWeW": "Đồng bộ hóa tin nhắn gốc",
   "mmY61": "0 trong số 2 tin nhắn MetaMask đã ký",
@@ -853,26 +885,12 @@
   "CagXi": "Không có web3",
   "2pKTLR": "Ngọt! Thông báo trên màn hình đang bật :)",
   "XIw7y": "Bắt đầu",
-  "1p9mMH": "Nhập thông tin hồ sơ của bạn",
-  "2dpEtI": "Ho",
-  "h7cxv": "Ten",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} Bạn cần phải có tiền trong ví của mình để tạo danh tính. Bạn luôn có thể thực hiện việc này sau khi bạn nạp tiền vào ví của mình bằng cách vào cài đặt của bạn.",
-  "3uPAxx": "Bạn không có tiền",
-  "1xCh1J": "Công bố",
-  "2Np1YB": "Bỏ qua ngay bây giờ",
-  "2RQByv": "được phát hành",
-  "1QWML6": "tạm",
-  "39z7m5": "Sớm",
-  "1IS4x0": "tương tác",
-  "3qH7cV": "Tên là bắt buộc",
-  "2jWTcd": "Ví di động gốc",
-  "CBV19": "Ví di động của Origin sẽ cho phép bạn lưu trữ tiền điện tử để bạn có thể mua và bán trên DApp của chúng tôi.",
-  "3Wb2Vz": "Có sẵn cho iOS và Android",
-  "2nj6ZX": "MetaMask là một phần mở rộng trình duyệt cho phép bạn truy cập web phi tập trung.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Có sẵn cho {browser}",
   "29RrPk": "Kết nối MetaMask",
-  "jC283": "Kết nối ví tiền điện tử",
   "2lqwoN": "Đang tải...",
   "3UjbU1": "Đã bật thông báo trên màn hình",
   "gLVF0": "Cài đặt",
@@ -888,6 +906,9 @@
   "38WM0A": "Máy chủ cầu nối",
   "23S1SF": "Máy chủ Discovery",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Người dùng vô danh",
