--- a/dapp3/translations/zh_CN.json
+++ b/dapp3/translations/zh_CN.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "好",
   "1gr3xK": "推特账号成功验证！",
   "2BpmkI": "Google 账号成功验证！",
   "12mV06": "手机成功验证！",
@@ -85,6 +91,35 @@
     "schema.resumes": "简历",
     "schema.volunteers": "志愿者"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "加载中...",
+  "1ydkJH": "继续",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "发布",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "启用消息传递功能",
   "1KvwDF": "Origin Messaging",
   "2XaOyJ": "向该用户发送消息之前，请先开始使用 Origin",
@@ -108,6 +143,7 @@
   "4qkP5F": "裁剪",
   "BcfF1": "删除",
   "3N2LLn": "您的浏览器不支持视频标记。",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "销售完成",
   "2sSICu": "争议开始",
   "1pxzG8": "已作出裁决",
+  "1dxXSN": "开始",
   "2XVXB5": "正在存储在区块链上。",
   "48sqnA": "请稍等。",
   "3JYttU": "等待确认中。",
@@ -237,7 +274,6 @@
   "2fdHS3": "更新您的列表",
   "12qS4F": "更新列表类型",
   "3HqBJ": "您想创建哪种类型的列表？",
-  "1ydkJH": "继续",
   "2oRomf": "必须选择类别",
   "tjihf": "添加列表",
   "3Piqbx": "支付",
@@ -502,7 +538,6 @@
   "wY0C5": "更多详情",
   "4ETL05": "等待",
   "4qOByY": "已获得",
-  "1IZ5ov": "好",
   "2kJTBH": "显示",
   "4v4xei": "全部",
   "2j242e": "已解锁",
@@ -521,7 +556,6 @@
   "4FezaJ": "代币赚了",
   "2haWvO": "总收入",
   "1erpVf": "赚取的代币",
-  "2CPasx": "加载中...",
   "2tRIOg": "目前没有奖励活动",
   "2iDrtJ": "我想邀请您注册使用 Origin 并开始赚取 Origin 代币 (OGN)。Origin 是一个新的电商平台。当您创建个人资料，邀请好友或在平台上进行买卖，都可以赚取 Origin 代币。",
   "1gCRzk": "我想邀请您注册使用 Origin 并开始赚取 Origin 代币 (OGN)。Origin 是一个新的电商平台。当您创建个人资料，邀请好友或在平台上进行买卖，都可以赚取 Origin 代币。",
@@ -592,14 +626,14 @@
   "1A0dWH": "立即开始",
   "2pjq9v": "有问题吗？",
   "4BVEan": "联系我们",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "参与活动",
   "44Obrh": "参与我们的 {campaignName} 奖励活动以赚取 Origin 代币",
   "1JeQU0": "通过完成诸如验证您的身份和与朋友分享Origin等任务来赚取OGN。 OGN可以以多种方式使用。获得的OGN将在 {campaignName}结束后转移以获得代币.",
   "4fuMIp": "立即开始",
   "2El6Ld": "解雇",
   "1R5Tqk": "接受条款",
-  "m0l6": "注册 Origin 账号",
-  "2EpzBo": "注册 Origin 账号",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "我接受以上的条款和条件",
   "2JZUuK": "你所在的国家没有参与资格",
   "3ARgQ2": "抱歉，{country} 不能参与这项活动",
@@ -629,9 +663,13 @@
   "3d1Uto": "其他用户会知道你拥有经过验证的 Google 帐户，但你的帐户的详细信息不会在区块链上发布。我们绝不会替你发布任何信息。",
   "FoBDR": "Google 账号成功验证！",
   "1ZMsNQ": "成功!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "验证您的电话号码",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "在下面输入您的电话号码，OriginID将通过短信向您发送验证码。",
-  "2kSdkz": "您如果验证手机号，将允许 Origin 偶尔向您发送有关您在平台上的交易信息和其他通知。",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "输入我们发送给您的代码",
   "OxVwu": "电话号码已验证！",
   "2ocEjm": "验证您的Twitter帐户",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "6个确认中的{confirmations.noOfConfirmations} 个",
   "2XqpJE": "完成（{confirmations.noOfConfirmations} 确认）",
-  "1dxXSN": "开始",
   "3UgV1b": "在 Origin 上销售",
   "1Lm6gh": "加载邮件时出错",
   "2vAKrL": "载入中...",
@@ -761,13 +798,17 @@
     "_1": "通知"
   },
   "1NaRKF": "查看全部",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "连接到",
-  "lGvCt": "ETH地址",
-  "4CQP5I": "编辑个人资料",
-  "2lBtlo": "设置",
-  "11UGHW": "我的身份",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "未命名的用户",
   "2qHaXn": "个人档案完成度",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} 拒绝了你的出价 {title}",
   "2nsNrC": "{nameLink} 接受了你对 {title} 的出价 ",
   "3VLvv1": "与 {nameLink} 进行的 {title} 交易已确认",
@@ -785,25 +826,16 @@
   "3XLNbf": "我要什么需要完成这个步骤？",
   "1uKbVV": "关于 Origin Messaging",
   "2tPHpd": "加密货币钱包是一种软件程序，用于存储私钥和公钥，并与各种区块链交互，使用户能够发送和接收数字货币并监控其余额。如果您想使用比特币或任何其他加密货币，您将需要一个数字钱包。",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "关于区块链的身份",
   "4o9sVo": "加密货币钱包是一种软件程序，用于存储私钥和公钥，并与各种区块链交互，使用户能够发送和接收数字货币并监控其余额。如果您想使用比特币或任何其他加密货币，您将需要一个数字钱包。",
   "1JNI6V": "了解更多",
   "3NRLhm": "什么是加密钱包？",
   "2HUml2": "加密货币钱包是一种软件程序，用于存储私钥和公钥，并与各种区块链交互，使用户能够发送和接收数字货币并监控其余额。如果您想使用比特币或任何其他加密货币，您将需要一个数字钱包。",
   "28APX7": "您的商品列表在等待......",
-  "1IXSHG": "恭喜",
-  "34IDA4": "您已成功激活您的帐户，可以继续您在 Origin 电商平台上的旅程。",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "您现在已完成：",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "钱包创建",
-  "2sG5u1": "Messaging 以成功启用",
-  "2ApFEM": "桌面通知已启用",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "剩下的步骤：",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "资助你的钱包",
-  "4hOCr3": "完成您的个人档案",
+  "jC283": "连接加密钱包",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Origin Messaging",
   "4aVWeW": "Origin Messaging 正在同步",
   "mmY61": "已签署2个MetaMask消息中的0个",
@@ -853,26 +885,12 @@
   "CagXi": "没有Web3",
   "2pKTLR": "桌面通知成功启用！:)",
   "XIw7y": "入门",
-  "1p9mMH": "输入您的个人信息",
-  "2dpEtI": "名字",
-  "h7cxv": "姓氏",
-  "2pz6sX": "简单的介绍一下你自己",
-  "3uFhNl": "{=You don't have funds} 您需要在钱包中有资金来创建身份。通过转到您的设置，您可以在资金完成后立即执行此操作。",
-  "3uPAxx": "你的钱包里没有资金",
-  "1xCh1J": "发布",
-  "2Np1YB": "暂时跳过",
-  "2RQByv": "已发布",
-  "1QWML6": "临时",
-  "39z7m5": "不久",
-  "1IS4x0": "互动",
-  "3qH7cV": "名字是必需的",
-  "2jWTcd": "Origin 移动钱包",
-  "CBV19": "Origin的手机钱包将允许您存储加密货币，以便您可以在我们的DApp上进行买卖。",
-  "3Wb2Vz": "适用于iOS和Android",
-  "2nj6ZX": "MetaMask是一个浏览器扩展，允许您访问分散的Web。",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "可用于 {browser}",
   "29RrPk": "连接MetaMask",
-  "jC283": "连接加密钱包",
   "2lqwoN": "加载中...",
   "3UjbU1": "已启用桌面通知✅",
   "gLVF0": "设置",
@@ -888,6 +906,9 @@
   "38WM0A": "桥接服务器",
   "23S1SF": "Discovery Server",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "托管中",
   "NrhOS": "已释放",
   "QUO1v": "金额",
@@ -1044,20 +1065,13 @@
   "2330bB": "你如果验证 Facebook，推特和爱彼迎账号，可以获得更多的 OGN。",
   "1b7Zwb": "赚取高达",
   "29Quwo": "明白了！",
-  "1tixem": "下一步：验证你的电话号码",
-  "2k5cTO": "验证有效的10位数电话号码以进一步强化你的个人档案",
-  "IqnqE": "验证以赚取",
-  "Ek9Tv": "继续",
-  "4okJre": "下一步：验证您的电子邮件",
-  "3VMsLo": "点击发布以保存您做的更改或继续验证",
-  "cjvCD": "发布更改",
   "2MO8B7": "发布更改",
-  "1JLKPg": "注册并开始赚取 Origin 代币 (OGN)。",
-  "1YFhvm": "完善个人信息即可赚取代币。",
-  "3iqW1P": "立即注册",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "跳过这一步",
-  "33tWcy": "上传照片并提供姓名和说明",
-  "1LH6Qw": "立即开始",
   "fs65Z": "您有未发布的更改",
   "3O45za": "技术基于",
   "2jblSi": "未命名用户",
