--- a/dapp3/translations/fr_FR.json
+++ b/dapp3/translations/fr_FR.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Compte Twitter vérifié",
   "2BpmkI": "Compte Google vérifié",
   "12mV06": "Téléphone vérifié",
@@ -85,6 +91,35 @@
     "schema.resumes": "CV",
     "schema.volunteers": "Bénévolat"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Chargement...",
+  "1ydkJH": "Continuer",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Publier",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Activer la messagerie",
   "1KvwDF": "Messagerie d'Origin",
   "2XaOyJ": "Commencez à utiliser Origin avant de pouvoir envoyer un message à cet utilisateur",
@@ -108,6 +143,7 @@
   "4qkP5F": "Surgir",
   "BcfF1": "Retirer",
   "3N2LLn": "Votre navigateur ne supporte pas le tag vidéo.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Vente terminée",
   "2sSICu": "Le litige a commencé",
   "1pxzG8": "Décision rendue",
+  "1dxXSN": "Commencer",
   "2XVXB5": "Ecrire à la blockchain.",
   "48sqnA": "Cela peut prendre quelques instants.",
   "3JYttU": "En attente de confirmation.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Mettons à jour votre fiche",
   "12qS4F": "Mettre à jour le type d'annonce",
   "3HqBJ": "Quel type d’annonce souhaitez-vous créer ?",
-  "1ydkJH": "Continuer",
   "2oRomf": "La catégorie est obligatoire",
   "tjihf": "Ajouter une annonce",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "En attente",
   "4qOByY": "Gagné",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Jetons gagnés",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Chargement...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Rejoignez-moi sur Origin et gagnez des jetons de crypto-monnaie Origin (OGN). Origin est un nouveau marché pour acheter et vendre avec d’autres utilisateurs. Gagnez des jetons Origin lorsque vous créez votre profil, invitez vos amis, achetez et vendez sur le marché.",
   "1gCRzk": "Rejoignez-moi sur Origin et gagnez des jetons de crypto-monnaie Origin (OGN). Origin est un nouveau marché pour acheter et vendre avec d’autres utilisateurs. Gagnez des jetons Origin lorsque vous créez votre profil, invitez vos amis, achetez et vendez sur le marché.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Commencer",
   "2pjq9v": "Des questions?",
   "4BVEan": "Entrer en contact",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Rejoignez nos {campaignName} pour gagner des jetons",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Commencer",
   "2El6Ld": "Rejeter",
   "1R5Tqk": "Accepter les termes",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Inscrivez-vous à Origin aujourd'hui",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "J'accepte les termes et conditions",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Oups, {country} n'est pas éligible",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Vérifiez votre numéro de téléphone",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Entrez votre numéro de téléphone ci-dessous et OriginID vous enverra un code de vérification par SMS.",
-  "2kSdkz": "En vérifiant votre courrier électronique, vous autorisez Origin à vous envoyer des courriers électroniques occasionnels, tels que des notifications relatives à vos transactions.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Entrez le code que nous vous avons envoyé ci-dessous",
   "OxVwu": "Numéro de téléphone vérifié!",
   "2ocEjm": "Vérifiez votre compte Twitter",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} des 6 confirmations",
   "2XqpJE": "Complet ({confirmations.noOfConfirmations} confirmations)",
-  "1dxXSN": "Commencer",
   "3UgV1b": "Vendre sur Origin",
   "1Lm6gh": "Erreur de chargement des messages",
   "2vAKrL": "Chargement...",
@@ -761,13 +798,17 @@
     "_1": "Notification"
   },
   "1NaRKF": "Voir tout",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Connecté à",
-  "lGvCt": "Adresse ETH",
-  "4CQP5I": "Editer le profil",
-  "2lBtlo": "Settings",
-  "11UGHW": "Mon identité",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Utilisateur sans nom",
   "2qHaXn": "Force du profil",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} refusé votre offre sur {title}",
   "2nsNrC": "{nameLink} accepté votre offre sur {title}",
   "3VLvv1": "Transaction avec {nameLink} finalisé pour {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Pourquoi ai-je besoin de faire ça?",
   "1uKbVV": "À propos de la messagerie d'Origin",
   "2tPHpd": "Un portefeuille de crypto-monnaie est un logiciel qui stocke des clés privées et publiques et interagit avec diverses chaînes de blocs pour permettre aux utilisateurs d'envoyer et de recevoir des devises numériques et de surveiller leur solde. Si vous souhaitez utiliser Bitcoin ou toute autre crypto-monnaie, vous devez disposer d'un portefeuille numérique.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "À propos de l'identité sur la blockchain",
   "4o9sVo": "Un portefeuille de crypto-monnaie est un logiciel qui stocke des clés privées et publiques et interagit avec diverses chaînes de blocs pour permettre aux utilisateurs d'envoyer et de recevoir des devises numériques et de surveiller leur solde. Si vous souhaitez utiliser Bitcoin ou toute autre crypto-monnaie, vous devez disposer d'un portefeuille numérique.",
   "1JNI6V": "En savoir plus",
   "3NRLhm": "Qu'est-ce qu'un portefeuille crypto?",
   "2HUml2": "Un portefeuille de crypto-monnaie est un logiciel qui stocke des clés privées et publiques et interagit avec diverses chaînes de blocs pour permettre aux utilisateurs d'envoyer et de recevoir des devises numériques et de surveiller leur solde. Si vous souhaitez utiliser Bitcoin ou toute autre crypto-monnaie, vous devez disposer d'un portefeuille numérique.",
   "28APX7": "Votre annonce est en attente ...",
-  "1IXSHG": "Toutes nos félicitations",
-  "34IDA4": "Vous avez activé votre compte avec succès. Vous êtes maintenant prêt à continuer votre voyage sur le marché d'origine.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Vous avez maintenant terminé ce qui suit:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Création de portefeuille",
-  "2sG5u1": "Messagerie activée",
-  "2ApFEM": "Notifications de bureau activées",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Étapes restantes:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Financer votre portefeuille",
-  "4hOCr3": "Complète ton profil",
+  "jC283": "Connecter un portefeuille crypto",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Messagerie d'Origin",
   "4aVWeW": "Synchronisation de la messagerie d'Origin",
   "mmY61": "0 des 2 messages de méta-masque signés",
@@ -853,26 +885,12 @@
   "CagXi": "Pas de Web3",
   "2pKTLR": "Sucré! Les notifications sur le bureau sont activées :)",
   "XIw7y": "Commencer",
-  "1p9mMH": "Entrez les informations de votre profil",
-  "2dpEtI": "Prénom",
-  "h7cxv": "Nom de famille",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} Vous devez avoir des fonds dans votre portefeuille pour créer une identité. Vous pouvez toujours le faire plus tard, après avoir alimenté votre portefeuille, en accédant à vos paramètres.",
-  "3uPAxx": "Vous n'avez pas de fonds",
-  "1xCh1J": "Publier",
-  "2Np1YB": "Ignorer pour l'instant",
-  "2RQByv": "publié",
-  "1QWML6": "provisoire",
-  "39z7m5": "bientôt",
-  "1IS4x0": "interactif",
-  "3qH7cV": "Le prénom est requis",
-  "2jWTcd": "Portefeuille mobile Origin",
-  "CBV19": "Le portefeuille mobile d'Origine vous permettra de stocker des devises cryptées pour pouvoir acheter et vendre sur notre DApp.",
-  "3Wb2Vz": "Disponible pour iOS et Android",
-  "2nj6ZX": "MetaMask est une extension de navigateur qui vous permettra d'accéder au Web décentralisé.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Disponible pour {browser}",
   "29RrPk": "Connecter le méta-masque",
-  "jC283": "Connecter un portefeuille crypto",
   "2lqwoN": "Chargement...",
   "3UjbU1": "Notifications de bureau activées",
   "gLVF0": "Réglages",
@@ -888,6 +906,9 @@
   "38WM0A": "Serveur Bridge",
   "23S1SF": "Serveur de découverte",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Utilisateur Inconnu",
