--- a/dapp3/translations/id_ID.json
+++ b/dapp3/translations/id_ID.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Akun Twitter Terverifikasi",
   "2BpmkI": "Akun Google Terverifikasi",
   "12mV06": "Telepon Terverifikasi",
@@ -85,6 +91,35 @@
     "schema.resumes": "Resume",
     "schema.volunteers": "Relawan"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Memuat...",
+  "1ydkJH": "Lanjutkan",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Menerbitkan",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Aktifkan Perpesanan",
   "1KvwDF": "Pesan Asal",
   "2XaOyJ": "Mulai menggunakan Asal sebelum Anda dapat mengirim pesan kepada pengguna ini",
@@ -108,6 +143,7 @@
   "4qkP5F": "Tanaman",
   "BcfF1": "Menghapus",
   "3N2LLn": "Browser Anda tidak mendukung tag video.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Dijual Selesai",
   "2sSICu": "Perselisihan Dimulai",
   "1pxzG8": "Ruling Made",
+  "1dxXSN": "Memulai",
   "2XVXB5": "Menulis ke blockchain.",
   "48sqnA": "Ini mungkin butuh satu menit.",
   "3JYttU": "Menunggu konfirmasi.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Mari perbarui daftar Anda",
   "12qS4F": "Perbarui jenis cantuman",
   "3HqBJ": "Jenis listing apa yang ingin anda buat?",
-  "1ydkJH": "Lanjutkan",
   "2oRomf": "Kategori diperlukan",
   "tjihf": "Tambahkan Daftar",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "Tertunda",
   "4qOByY": "Berpenghasilan",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Token diterima",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Memuat...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Bergabunglah dengan saya di Origin dan dapatkan token cryptocurrency Asal (OGN). Origin adalah pasar baru untuk membeli dan menjual dengan pengguna lain. Dapatkan token Asal saat Anda membuat profil, mengundang teman, dan membeli dan menjual di pasar.",
   "1gCRzk": "Bergabunglah dengan saya di Origin dan dapatkan token cryptocurrency Asal (OGN). Origin adalah pasar baru untuk membeli dan menjual dengan pengguna lain. Dapatkan token Asal saat Anda membuat profil, mengundang teman, dan membeli dan menjual di pasar.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Memulai",
   "2pjq9v": "Punya pertanyaan?",
   "4BVEan": "Berhubungan",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Bergabunglah dengan {campaignName} kami untuk mendapatkan token",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Memulai",
   "2El6Ld": "Memberhentikan",
   "1R5Tqk": "Terima Ketentuan",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Mendaftar untuk Asal",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "saya menerima syarat dan ketentuannya",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Ups, {country} tidak memenuhi syarat",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifikasi Nomor Telepon Anda",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Masukkan nomor telepon Anda di bawah dan OriginID akan mengirimkan kode verifikasi kepada Anda melalui SMS.",
-  "2kSdkz": "Dengan memverifikasi nomor telepon Anda, Anda memberikan izin Asal untuk mengirimi Anda email sesekali seperti pemberitahuan tentang transaksi Anda.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Masukkan kode yang kami kirimkan kepada Anda di bawah ini",
   "OxVwu": "Nomor telepon terverifikasi!",
   "2ocEjm": "Verifikasi Akun Twitter Anda",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} dari 6 konfirmasi",
   "2XqpJE": "Selesai ({confirmations.noOfConfirmations} konfirmasi)",
-  "1dxXSN": "Memulai",
   "3UgV1b": "Jual di Asal",
   "1Lm6gh": "Kesalahan saat memuat pesan",
   "2vAKrL": "Pemuatan...",
@@ -761,13 +798,17 @@
     "_1": "Pemberitahuan"
   },
   "1NaRKF": "Lihat semua",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Terhubung dengan",
-  "lGvCt": "Alamat ETH",
-  "4CQP5I": "Edit Profil",
-  "2lBtlo": "Settings",
-  "11UGHW": "Identitas saya",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Pengguna Tanpa Nama",
   "2qHaXn": "Kekuatan Profil",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} menolak tawaran Anda pada {title}",
   "2nsNrC": "{nameLink} menerima tawaran Anda pada {title}",
   "3VLvv1": "Transaksi dengan {nameLink} diselesaikan untuk {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Mengapa saya harus melakukan ini?",
   "1uKbVV": "Tentang Pesan Asal",
   "2tPHpd": "Dompet cryptocurrency adalah program perangkat lunak yang menyimpan kunci privat dan publik dan berinteraksi dengan berbagai blockchain untuk memungkinkan pengguna mengirim dan menerima mata uang digital dan memantau saldo mereka. Jika Anda ingin menggunakan Bitcoin atau cryptocurrency lainnya, Anda harus memiliki dompet digital.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Tentang Identitas di Blockchain",
   "4o9sVo": "Dompet cryptocurrency adalah program perangkat lunak yang menyimpan kunci privat dan publik dan berinteraksi dengan berbagai blockchain untuk memungkinkan pengguna mengirim dan menerima mata uang digital dan memantau saldo mereka. Jika Anda ingin menggunakan Bitcoin atau cryptocurrency lainnya, Anda harus memiliki dompet digital.",
   "1JNI6V": "Pelajari lebih lanjut",
   "3NRLhm": "Apa itu Dompet Crypto?",
   "2HUml2": "Dompet cryptocurrency adalah program perangkat lunak yang menyimpan kunci privat dan publik dan berinteraksi dengan berbagai blockchain untuk memungkinkan pengguna mengirim dan menerima mata uang digital dan memantau saldo mereka. Jika Anda ingin menggunakan Bitcoin atau cryptocurrency lainnya, Anda harus memiliki dompet digital.",
   "28APX7": "Daftar Anda menunggu ...",
-  "1IXSHG": "Selamat",
-  "34IDA4": "Anda telah berhasil mengaktifkan akun Anda. Anda sekarang siap untuk melanjutkan perjalanan Anda di Origin Marketplace.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Anda sekarang telah menyelesaikan yang berikut:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Pembuatan Dompet",
-  "2sG5u1": "Olahpesan Diaktifkan",
-  "2ApFEM": "Pemberitahuan Desktop Diaktifkan",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Langkah-langkah yang tersisa:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Danai dompet Anda",
-  "4hOCr3": "Lengkapi Profil Anda",
+  "jC283": "Hubungkan Dompet Crypto",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Pesan Asal",
   "4aVWeW": "Sinkronisasi Pesan Asal",
   "mmY61": "0 dari 2 pesan MetaMask ditandatangani",
@@ -853,26 +885,12 @@
   "CagXi": "Tidak ada Web3",
   "2pKTLR": "Manis! Notifikasi desktop aktif :)",
   "XIw7y": "Mulai",
-  "1p9mMH": "Masukkan Informasi Profil Anda",
-  "2dpEtI": "Nama depan",
-  "h7cxv": "Nama belakang",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} Anda harus memiliki dana di dompet Anda untuk membuat identitas. Anda selalu dapat melakukan ini nanti setelah Anda mendanai dompet Anda dengan pergi ke pengaturan Anda.",
-  "3uPAxx": "Anda tidak punya dana",
-  "1xCh1J": "Menerbitkan",
-  "2Np1YB": "Lewati sekarang",
-  "2RQByv": "diterbitkan",
-  "1QWML6": "sementara",
-  "39z7m5": "segera",
-  "1IS4x0": "interaktif",
-  "3qH7cV": "Nama depan wajib diisi",
-  "2jWTcd": "Dompet Ponsel Asal",
-  "CBV19": "Dompet Seluler Origin memungkinkan Anda untuk menyimpan mata uang kripto sehingga Anda dapat membeli dan menjual di DApp kami.",
-  "3Wb2Vz": "Tersedia untuk iOS dan Android",
-  "2nj6ZX": "MetaMask adalah ekstensi peramban yang memungkinkan Anda mengakses web desentralisasi.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Tersedia untuk {browser}",
   "29RrPk": "Hubungkan MetaMask",
-  "jC283": "Hubungkan Dompet Crypto",
   "2lqwoN": "Memuat...",
   "3UjbU1": "Pemberitahuan desktop diaktifkan ✅",
   "gLVF0": "Pengaturan",
@@ -888,6 +906,9 @@
   "38WM0A": "Bridge Server",
   "23S1SF": "Server Penemuan",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Pengguna tanpa nama",
