--- a/dapp3/translations/nl_NL.json
+++ b/dapp3/translations/nl_NL.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Twitter-account geverifieerd",
   "2BpmkI": "Google-account geverifieerd",
   "12mV06": "Telefoon geverifieerd",
@@ -85,6 +91,35 @@
     "schema.resumes": "CV's",
     "schema.volunteers": "Vrijwilligers"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Laden...",
+  "1ydkJH": "Doorgaan",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Publiceren",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Schakel berichten in",
   "1KvwDF": "Origin Messaging",
   "2XaOyJ": "Ga aan de slag met Origin voordat je deze gebruiker een bericht kunt sturen",
@@ -108,6 +143,7 @@
   "4qkP5F": "Gewas",
   "BcfF1": "Verwijderen",
   "3N2LLn": "Uw browser ondersteunt de videotag niet.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Verkoop voltooid",
   "2sSICu": "Geschil begonnen",
   "1pxzG8": "Uitspraak gemaakt",
+  "1dxXSN": "Begin",
   "2XVXB5": "Schrijven naar de blockchain.",
   "48sqnA": "Dit kan even duren.",
   "3JYttU": "Wachten op bevestiging.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Laten we uw vermelding bijwerken",
   "12qS4F": "Type vermelding updaten",
   "3HqBJ": "Wat voor advertentie wilt u plaatsen?",
-  "1ydkJH": "Doorgaan",
   "2oRomf": "Categorie is verplicht",
   "tjihf": "Voeg een lijst toe",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "In afwachting",
   "4qOByY": "verdiende",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Verdiende tokens",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Laden...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Doe mee met Origin en verdien Origin cryptocurrency tokens (OGN). Origin is een nieuwe marktplaats om te kopen en verkopen met andere gebruikers. Verdien Origin-tokens bij het maken van je profiel, nodig je vrienden uit en koop en verkoop op de marktplaats.",
   "1gCRzk": "Doe mee met Origin en verdien Origin cryptocurrency tokens (OGN). Origin is een nieuwe marktplaats om te kopen en verkopen met andere gebruikers. Verdien Origin-tokens bij het maken van je profiel, nodig je vrienden uit en koop en verkoop op de marktplaats.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Begin",
   "2pjq9v": "Vragen hebben?",
   "4BVEan": "Neem contact op",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Word lid van onze {campaignName} om tokens te verdienen",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Begin",
   "2El6Ld": "ontslaan",
   "1R5Tqk": "Voorwaarden accepteren",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Meld je aan voor Origin",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Ik accepteer de algemene voorwaarden",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Oeps, {country} komt niet in aanmerking",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifieer je telefoonnummer",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Voer uw telefoonnummer hieronder in en OriginID stuurt u een verificatiecode via sms.",
-  "2kSdkz": "Door uw telefoonnummer te verifiëren, geeft u Origin toestemming om u af en toe e-mails te sturen, zoals meldingen over uw transacties.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Voer de code in die we je hieronder hebben verzonden",
   "OxVwu": "Telefoonnummer geverifieerd!",
   "2ocEjm": "Verifieer je Twitter-account",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} van 6 bevestigingen",
   "2XqpJE": "Voltooid ({confirmations.noOfConfirmations} bevestigingen)",
-  "1dxXSN": "Begin",
   "3UgV1b": "Verkoop op Origin",
   "1Lm6gh": "Fout bij het laden van berichten",
   "2vAKrL": "Bezig met laden...",
@@ -761,13 +798,17 @@
     "_1": "Kennisgeving"
   },
   "1NaRKF": "Bekijk alles",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Verbonden met",
-  "lGvCt": "ETH-adres",
-  "4CQP5I": "Bewerk profiel",
-  "2lBtlo": "Settings",
-  "11UGHW": "Mijn identiteit",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Naamloze gebruiker",
   "2qHaXn": "Profiel Sterkte",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} heeft uw aanbieding op {title}afgewezen",
   "2nsNrC": "{nameLink} accepteerde je aanbieding op {title}",
   "3VLvv1": "Transactie met {nameLink} gefinaliseerd voor {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Waarom moet ik dit doen?",
   "1uKbVV": "Over Origin Messaging",
   "2tPHpd": "Een cryptocurrency wallet is een softwareprogramma dat privé- en openbare sleutels opslaat en interageert met verschillende blockchain, zodat gebruikers digitale valuta kunnen verzenden en ontvangen en hun saldo kunnen controleren. Als u Bitcoin of een andere cryptocurrency wilt gebruiken, moet u een digitale portemonnee hebben.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Over identiteit op de Blockchain",
   "4o9sVo": "Een cryptocurrency wallet is een softwareprogramma dat privé- en openbare sleutels opslaat en interageert met verschillende blockchain, zodat gebruikers digitale valuta kunnen verzenden en ontvangen en hun saldo kunnen controleren. Als u Bitcoin of een andere cryptocurrency wilt gebruiken, moet u een digitale portemonnee hebben.",
   "1JNI6V": "Meer informatie",
   "3NRLhm": "Wat is een Crypto-portemonnee?",
   "2HUml2": "Een cryptocurrency wallet is een softwareprogramma dat privé- en openbare sleutels opslaat en interageert met verschillende blockchain, zodat gebruikers digitale valuta kunnen verzenden en ontvangen en hun saldo kunnen controleren. Als u Bitcoin of een andere cryptocurrency wilt gebruiken, moet u een digitale portemonnee hebben.",
   "28APX7": "Je aanbieding wacht ...",
-  "1IXSHG": "Gefeliciteerd",
-  "34IDA4": "Je hebt je account succesvol geactiveerd. U bent nu klaar om uw reis voort te zetten op de Origin Marketplace.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "U hebt nu het volgende voltooid:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Wallet-creatie",
-  "2sG5u1": "Berichten ingeschakeld",
-  "2ApFEM": "Desktopmeldingen ingeschakeld",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Resterende stappen:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Financier uw portemonnee",
-  "4hOCr3": "Voltooi uw profiel",
+  "jC283": "Sluit een Crypto-portemonnee aan",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Origin Messaging",
   "4aVWeW": "Origin Messaging Syncing",
   "mmY61": "0 van 2 MetaMask-berichten ondertekend",
@@ -853,26 +885,12 @@
   "CagXi": "Geen Web3",
   "2pKTLR": "Zoet! Desktopmeldingen zijn aan :)",
   "XIw7y": "Ermee beginnen",
-  "1p9mMH": "Voer uw profielinformatie in",
-  "2dpEtI": "Voornaam",
-  "h7cxv": "Achternaam",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} U moet geld in uw portemonnee hebben om een identiteit te creëren. Je kunt dit altijd later doen nadat je je portemonnee hebt gefinancierd door naar je instellingen te gaan.",
-  "3uPAxx": "Je hebt geen geld",
-  "1xCh1J": "Publiceren",
-  "2Np1YB": "Spring voor nu",
-  "2RQByv": "gepubliceerd",
-  "1QWML6": "voorlopige",
-  "39z7m5": "spoedig",
-  "1IS4x0": "interactieve",
-  "3qH7cV": "Voornaam is verplicht",
-  "2jWTcd": "Origin Mobile Wallet",
-  "CBV19": "Met de mobiele Wallet van Origin kunt u crypto-valuta opslaan, zodat u onze DApp kunt kopen en verkopen.",
-  "3Wb2Vz": "Beschikbaar voor iOS en Android",
-  "2nj6ZX": "MetaMask is een browserextensie waarmee u toegang krijgt tot het gedecentraliseerde web.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Beschikbaar voor {browser}",
   "29RrPk": "Verbind MetaMask",
-  "jC283": "Sluit een Crypto-portemonnee aan",
   "2lqwoN": "Laden...",
   "3UjbU1": "Bureaubladmeldingen ingeschakeld ✅",
   "gLVF0": "instellingen",
@@ -888,6 +906,9 @@
   "38WM0A": "Bridge Server",
   "23S1SF": "Discovery Server",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Anonieme gebruiker",
