--- a/dapp3/translations/pt_PT.json
+++ b/dapp3/translations/pt_PT.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Conta do Twitter Verificada",
   "2BpmkI": "Conta do Google verificada",
   "12mV06": "Telefone verificado",
@@ -85,6 +91,35 @@
     "schema.resumes": "Currículos",
     "schema.volunteers": "Voluntários"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Carregando...",
+  "1ydkJH": "Continuar",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Publicar",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Ativar mensagens",
   "1KvwDF": "Mensagens de origem",
   "2XaOyJ": "Comece a usar o Origin antes de enviar uma mensagem ao usuário",
@@ -108,6 +143,7 @@
   "4qkP5F": "Colheita",
   "BcfF1": "Remover",
   "3N2LLn": "Seu navegador não suporta a tag de vídeo.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Venda concluída",
   "2sSICu": "Disputa iniciada",
   "1pxzG8": "Decisão Feita",
+  "1dxXSN": "Iniciar",
   "2XVXB5": "Escrevendo para o blockchain.",
   "48sqnA": "Isso pode demorar um minuto.",
   "3JYttU": "Aguardando confirmação.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Vamos atualizar sua ficha",
   "12qS4F": "Atualizar o tipo de listagem",
   "3HqBJ": "Que tipo de anúncio você quer criar?",
-  "1ydkJH": "Continuar",
   "2oRomf": "A categoria é obrigatória",
   "tjihf": "Adicionar uma listagem",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "Pendente",
   "4qOByY": "Ganhou",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Tokens ganhos",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Carregando...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Junte-se a mim no Origin e ganhe tokens de criptomoeda do Origin (OGN). Origem é um novo mercado para comprar e vender com outros usuários. Ganhe tokens Origin quando criar seu perfil, convidar seus amigos e comprar e vender no mercado.",
   "1gCRzk": "Junte-se a mim no Origin e ganhe tokens de criptomoeda do Origin (OGN). Origem é um novo mercado para comprar e vender com outros usuários. Ganhe tokens Origin quando criar seu perfil, convidar seus amigos e comprar e vender no mercado.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Iniciar",
   "2pjq9v": "Tem perguntas?",
   "4BVEan": "Entrar em contato",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Junte-se ao nosso {campaignName} para ganhar tokens",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Iniciar",
   "2El6Ld": "Dispensar",
   "1R5Tqk": "Aceitar os termos",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Inscreva-se para a origem",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "eu aceito os termos e condições",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Ops, {country} não é elegível",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifique seu número de telefone",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Digite seu número de telefone abaixo e o OriginID enviará um código de verificação via SMS.",
-  "2kSdkz": "Ao verificar seu número de telefone, você concede permissão ao Origin para enviar e-mails ocasionais, como notificações sobre suas transações.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Digite o código que lhe enviamos abaixo",
   "OxVwu": "Número de telefone confirmado!",
   "2ocEjm": "Verifique sua conta do Twitter",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} de 6 confirmações",
   "2XqpJE": "Completo ({confirmations.noOfConfirmations} confirmações)",
-  "1dxXSN": "Iniciar",
   "3UgV1b": "Vender na origem",
   "1Lm6gh": "Erro ao carregar mensagens",
   "2vAKrL": "Carregando...",
@@ -761,13 +798,17 @@
     "_1": "Notificação"
   },
   "1NaRKF": "Ver tudo",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Conectado a",
-  "lGvCt": "Endereço ETH",
-  "4CQP5I": "Editar Perfil",
-  "2lBtlo": "Settings",
-  "11UGHW": "Minha identidade",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Usuário Sem Nome",
   "2qHaXn": "Força do perfil",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} recusou sua oferta em {title}",
   "2nsNrC": "{nameLink} aceitou sua oferta em {title}",
   "3VLvv1": "Transação com {nameLink} finalizado para {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Por que preciso fazer isso?",
   "1uKbVV": "Sobre o Origin Messaging",
   "2tPHpd": "Uma carteira de criptomoedas é um programa de software que armazena chaves privadas e públicas e interage com vários blockchain para permitir que os usuários enviem e recebam moeda digital e monitorem seu equilíbrio. Se você quiser usar Bitcoin ou qualquer outra criptomoeda, você precisará ter uma carteira digital.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Sobre a identidade no blockchain",
   "4o9sVo": "Uma carteira de criptomoedas é um programa de software que armazena chaves privadas e públicas e interage com vários blockchain para permitir que os usuários enviem e recebam moeda digital e monitorem seu equilíbrio. Se você quiser usar Bitcoin ou qualquer outra criptomoeda, você precisará ter uma carteira digital.",
   "1JNI6V": "Saber mais",
   "3NRLhm": "O que é uma carteira Crypto?",
   "2HUml2": "Uma carteira de criptomoedas é um programa de software que armazena chaves privadas e públicas e interage com vários blockchain para permitir que os usuários enviem e recebam moeda digital e monitorem seu equilíbrio. Se você quiser usar Bitcoin ou qualquer outra criptomoeda, você precisará ter uma carteira digital.",
   "28APX7": "Sua listagem está esperando ...",
-  "1IXSHG": "Parabéns",
-  "34IDA4": "Você ativou sua conta com sucesso. Agora você está pronto para continuar sua jornada no mercado de origem.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Agora você concluiu o seguinte:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Criação de Carteira",
-  "2sG5u1": "Mensagens ativadas",
-  "2ApFEM": "Notificações da área de trabalho ativadas",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Passos restantes:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Financie sua carteira",
-  "4hOCr3": "Complete seu perfil",
+  "jC283": "Conecte uma carteira de criptografia",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Mensagens de origem",
   "4aVWeW": "Sincronização de Mensagens de Origem",
   "mmY61": "0 de 2 mensagens MetaMask assinadas",
@@ -853,26 +885,12 @@
   "CagXi": "Sem Web3",
   "2pKTLR": "Doce! Notificações da área de trabalho estão ativadas :)",
   "XIw7y": "Começando",
-  "1p9mMH": "Insira suas informações de perfil",
-  "2dpEtI": "Primeiro nome",
-  "h7cxv": "Último nome",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} Você precisa ter fundos em sua carteira para criar uma identidade. Você sempre pode fazer isso mais tarde, depois de financiar sua carteira, indo para as configurações.",
-  "3uPAxx": "Você não tem fundos",
-  "1xCh1J": "Publicar",
-  "2Np1YB": "Saltar por agora",
-  "2RQByv": "Publicados",
-  "1QWML6": "provisório",
-  "39z7m5": "em breve",
-  "1IS4x0": "interativo",
-  "3qH7cV": "O primeiro nome é necessário",
-  "2jWTcd": "Carteira Móvel de Origem",
-  "CBV19": "A Carteira Móvel da Origin permitirá que você armazene moeda criptografada para que você possa comprar e vender em nosso DApp.",
-  "3Wb2Vz": "Disponível para iOS e Android",
-  "2nj6ZX": "MetaMask é uma extensão do navegador que lhe permitirá acessar a web descentralizada.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Disponível para {browser}",
   "29RrPk": "Conectar MetaMask",
-  "jC283": "Conecte uma carteira de criptografia",
   "2lqwoN": "Carregando...",
   "3UjbU1": "Notificações da área de trabalho ativadas ✅",
   "gLVF0": "Definições",
@@ -888,6 +906,9 @@
   "38WM0A": "Servidor Ponte",
   "23S1SF": "Servidor de Descoberta",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Utilizador Sem Nome",
