--- a/dapp3/translations/ro_RO.json
+++ b/dapp3/translations/ro_RO.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Contul Twitter verificat",
   "2BpmkI": "Contul Google a fost verificat",
   "12mV06": "Telefon verificat",
@@ -85,6 +91,35 @@
     "schema.resumes": "CV-uri",
     "schema.volunteers": "Voluntari"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Se încarcă...",
+  "1ydkJH": "Continuă",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Publica",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Activați Mesaje",
   "1KvwDF": "Mesaje originale",
   "2XaOyJ": "Începeți utilizarea originii înainte de a putea trimite acest utilizator un mesaj",
@@ -108,6 +143,7 @@
   "4qkP5F": "A decupa",
   "BcfF1": "Elimina",
   "3N2LLn": "Browserul dvs. nu acceptă eticheta video.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Vanzare Finalizata",
   "2sSICu": "Discuția a început",
   "1pxzG8": "Ruling Made",
+  "1dxXSN": "Incepe",
   "2XVXB5": "Scriind în bloc.",
   "48sqnA": "Ar putea dura un minut.",
   "3JYttU": "Așteptată confirmarea.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Să ne actualizăm înregistrarea",
   "12qS4F": "Actualizați tipul de listă",
   "3HqBJ": "Ce tip de anunț doriţi să creaţi?",
-  "1ydkJH": "Continuă",
   "2oRomf": "Este necesară o categorie",
   "tjihf": "Adăugați o listă",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "În aşteptare",
   "4qOByY": "câștigat",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Tokenul câștigat",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Se încarcă...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Alăturați-mă pe Origine și câștigați mărci de origine criptocurrency (OGN). Originea este o piață nouă pentru a cumpăra și a vinde cu alți utilizatori. Câștigă jetoane de origine când îți creezi profilul, invită-ți prietenii și cumperi și vinde pe piață.",
   "1gCRzk": "Alăturați-mă pe Origine și câștigați mărci de origine criptocurrency (OGN). Originea este o piață nouă pentru a cumpăra și a vinde cu alți utilizatori. Câștigă jetoane de origine când îți creezi profilul, invită-ți prietenii și cumperi și vinde pe piață.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Incepe",
   "2pjq9v": "Aveți întrebări?",
   "4BVEan": "Intrați în legătură",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Alăturați-vă {campaignName} pentru a câștiga jetoanele",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Incepe",
   "2El6Ld": "destitui",
   "1R5Tqk": "Acceptați termenii",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Înscrieți-vă pentru origine",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Accept termenii si conditiile",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "Hopa, {country} nu este eligibilă",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Verifică-ți numărul de telefon",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Introduceți numărul de telefon de mai jos și ID-ul de origine vă va trimite un cod de verificare prin SMS.",
-  "2kSdkz": "Verificând numărul dvs. de telefon, îi acordați permisiunea de origine pentru a vă trimite e-mailuri ocazionale, cum ar fi notificări despre tranzacțiile dvs.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Introduceți codul pe care v-am trimis mai jos",
   "OxVwu": "Numărul de telefon verificat!",
   "2ocEjm": "Verificați-vă contul Twitter",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} din 6 confirmări",
   "2XqpJE": "Complet ({confirmations.noOfConfirmations} confirmări)",
-  "1dxXSN": "Incepe",
   "3UgV1b": "Vindem pe origine",
   "1Lm6gh": "Eroare la încărcarea mesajelor",
   "2vAKrL": "Se incarca...",
@@ -761,13 +798,17 @@
     "_1": "Notificare"
   },
   "1NaRKF": "A vedea tot",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Conectat la",
-  "lGvCt": "Adresa ETH",
-  "4CQP5I": "Editează profilul",
-  "2lBtlo": "Settings",
-  "11UGHW": "Identitatea mea",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Utilizator fără nume",
   "2qHaXn": "Rezistența profilului",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} refuzat oferta dvs. la {title}",
   "2nsNrC": "{nameLink} acceptat oferta dvs. la {title}",
   "3VLvv1": "Tranzacție cu {nameLink} finalizată pentru {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "De ce trebuie să fac asta?",
   "1uKbVV": "Despre mesajele originale",
   "2tPHpd": "Un portofel de tip cryptocurrency este un program software care stochează chei private și publice și interacționează cu blocuri diferite pentru a permite utilizatorilor să trimită și să primească monedă digitală și să monitorizeze soldul acestora. Dacă doriți să utilizați Bitcoin sau orice altă criptocurrency, va trebui să aveți un portofel digital.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Despre identitatea pe blocul de blocuri",
   "4o9sVo": "Un portofel de tip cryptocurrency este un program software care stochează chei private și publice și interacționează cu blocuri diferite pentru a permite utilizatorilor să trimită și să primească monedă digitală și să monitorizeze soldul acestora. Dacă doriți să utilizați Bitcoin sau orice altă criptocurrency, va trebui să aveți un portofel digital.",
   "1JNI6V": "Află mai mult",
   "3NRLhm": "Ce este un portofel Crypto?",
   "2HUml2": "Un portofel de tip cryptocurrency este un program software care stochează chei private și publice și interacționează cu blocuri diferite pentru a permite utilizatorilor să trimită și să primească monedă digitală și să monitorizeze soldul acestora. Dacă doriți să utilizați Bitcoin sau orice altă criptocurrency, va trebui să aveți un portofel digital.",
   "28APX7": "Lista dvs. așteaptă ...",
-  "1IXSHG": "Felicitări",
-  "34IDA4": "Ați activat contul dvs. cu succes. Acum sunteți gata să vă continuați călătoria în Marketplace Origin.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Ați finalizat acum următoarele:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Crearea de portofele",
-  "2sG5u1": "Mesagerie activată",
-  "2ApFEM": "Notificări desktop activat",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Pasul următor:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Fonduriază-ți portofelul",
-  "4hOCr3": "Completați profilul",
+  "jC283": "Conectați un portofel Crypto",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Mesaje originale",
   "4aVWeW": "Sincronizarea mesajelor de origine",
   "mmY61": "0 din 2 mesaje MetaMask semnate",
@@ -853,26 +885,12 @@
   "CagXi": "Nu Web3",
   "2pKTLR": "Dulce! Comunicările pe desktop sunt pe :)",
   "XIw7y": "Noțiuni de bază",
-  "1p9mMH": "Introduceți informațiile despre profil",
-  "2dpEtI": "Prenume",
-  "h7cxv": "Numele de familie",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} Trebuie să ai fonduri în portofel pentru a crea o identitate. Puteți face acest lucru întotdeauna după ce vă finanțezi portofelul, accesând setările.",
-  "3uPAxx": "Nu ai fonduri",
-  "1xCh1J": "Publica",
-  "2Np1YB": "Sari peste acum",
-  "2RQByv": "publicat",
-  "1QWML6": "temporar",
-  "39z7m5": "curând",
-  "1IS4x0": "interactiv",
-  "3qH7cV": "Primul nume este necesar",
-  "2jWTcd": "Origine Mobile Wallet",
-  "CBV19": "Origine Mobile Wallet vă va permite să stocați moneda crypto astfel încât să puteți cumpăra și să vindeți pe DApp-ul nostru.",
-  "3Wb2Vz": "Disponibil pentru iOS și Android",
-  "2nj6ZX": "MetaMask este o extensie de browser care vă va permite să accesați webul descentralizat.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Disponibil pentru {browser}",
   "29RrPk": "Conectați MetaMask",
-  "jC283": "Conectați un portofel Crypto",
   "2lqwoN": "Se încarcă...",
   "3UjbU1": "Comunicările desktop au fost activate ✅",
   "gLVF0": "Setări",
@@ -888,6 +906,9 @@
   "38WM0A": "Server intermediar",
   "23S1SF": "Discovery Server",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Utilizator anonim",
