--- a/dapp3/translations/th_TH.json
+++ b/dapp3/translations/th_TH.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "ยืนยันบัญชี Twitter แล้ว",
   "2BpmkI": "ยืนยันบัญชี Google แล้ว",
   "12mV06": "ยืนยันหมายเลขโทรศัพท์แล้ว",
@@ -85,6 +91,35 @@
     "schema.resumes": "เรซูเม่",
     "schema.volunteers": "อาสาสมัคร"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "กำลังโหลด...",
+  "1ydkJH": "ต่อ",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "ประกาศ",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "เปิดใช้งานการส่งข้อความ",
   "1KvwDF": "ส่งข้อความต้นฉบับ",
   "2XaOyJ": "เริ่มต้นใช้งาน Origin ก่อนที่คุณจะสามารถส่งข้อความถึงผู้ใช้ได้",
@@ -108,6 +143,7 @@
   "4qkP5F": "พืชผล",
   "BcfF1": "เอาออก",
   "3N2LLn": "เบราว์เซอร์ของคุณไม่รองรับแท็กวิดีโอ",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "การขายเสร็จสมบูรณ์",
   "2sSICu": "ข้อพิพาทเริ่มต้น",
   "1pxzG8": "ปกครองทำ",
+  "1dxXSN": "เริ่ม",
   "2XVXB5": "เขียนถึง blockchain",
   "48sqnA": "อาจใช้เวลาสักครู่",
   "3JYttU": "รอการยืนยัน",
@@ -237,7 +274,6 @@
   "2fdHS3": "มาอัปเดตรายชื่อของคุณ",
   "12qS4F": "อัปเดตประเภทรายการ",
   "3HqBJ": "คุณต้องการสร้างรายชื่อประเภทใด",
-  "1ydkJH": "ต่อ",
   "2oRomf": "ต้องระบุหมวดหมู่",
   "tjihf": "เพิ่มรายชื่อ",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "รอดำเนินการ",
   "4qOByY": "ที่ได้รับ",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "รับโทเค็นแล้ว",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "กำลังโหลด...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "เข้าร่วมกับฉันบน Origin และรับโทเค็น cryptocurrency (OGN) Origin เป็นตลาดใหม่ในการซื้อและขายกับผู้ใช้รายอื่น รับโทเค็น Origin เมื่อคุณสร้างโปรไฟล์เชิญเพื่อนและซื้อและขายในตลาด",
   "1gCRzk": "เข้าร่วมกับฉันบน Origin และรับโทเค็น cryptocurrency (OGN) Origin เป็นตลาดใหม่ในการซื้อและขายกับผู้ใช้รายอื่น รับโทเค็น Origin เมื่อคุณสร้างโปรไฟล์เชิญเพื่อนและซื้อและขายในตลาด",
@@ -592,14 +626,14 @@
   "1A0dWH": "เริ่ม",
   "2pjq9v": "มีคำถาม?",
   "4BVEan": "ได้รับการติดต่อ",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "เข้าร่วม {campaignName} ของเราเพื่อรับโทเค็น",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "เริ่ม",
   "2El6Ld": "ยกเลิก",
   "1R5Tqk": "ยอมรับข้อกำหนด",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "สมัครสมาชิก Origin",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "ฉันยอมรับข้อกำหนดและเงื่อนไขต่างๆ",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "โอ๊ะโอ {country} ไม่มีสิทธิ์",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "ยืนยันหมายเลขโทรศัพท์ของคุณ",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "ป้อนหมายเลขโทรศัพท์ของคุณด้านล่างและ OriginID จะส่งรหัสยืนยันให้คุณทาง SMS",
-  "2kSdkz": "เมื่อยืนยันหมายเลขโทรศัพท์ของคุณคุณอนุญาตให้ Origin ส่งอีเมลถึงคุณเป็นครั้งคราวเช่นการแจ้งเตือนเกี่ยวกับธุรกรรม",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "ใส่รหัสที่เราส่งให้คุณด้านล่าง",
   "OxVwu": "ยืนยันหมายเลขโทรศัพท์แล้ว!",
   "2ocEjm": "ยืนยันบัญชี Twitter ของคุณ",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} จาก 6 การยืนยัน",
   "2XqpJE": "เสร็จสิ้น (ยืนยัน{confirmations.noOfConfirmations})",
-  "1dxXSN": "เริ่ม",
   "3UgV1b": "ขายในแหล่งกำเนิด",
   "1Lm6gh": "เกิดข้อผิดพลาดในการโหลดข้อความ",
   "2vAKrL": "กำลังโหลด ...",
@@ -761,13 +798,17 @@
     "_1": "การแจ้งเตือน"
   },
   "1NaRKF": "ดูทั้งหมด",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "เชื่อมต่อกับ",
-  "lGvCt": "ที่อยู่ ETH",
-  "4CQP5I": "แก้ไขโปรไฟล์",
-  "2lBtlo": "Settings",
-  "11UGHW": "ตัวตนของฉัน",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "ผู้ใช้ที่ไม่มีชื่อ",
   "2qHaXn": "รายละเอียดความแข็งแกร่ง",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} ปฏิเสธข้อเสนอของคุณในวันที่ {title}",
   "2nsNrC": "{nameLink} ยอมรับข้อเสนอของคุณในวันที่ {title}",
   "3VLvv1": "การทำธุรกรรมกับ {nameLink} สรุปแล้วสำหรับ {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "ทำไมฉันต้องทำเช่นนี้?",
   "1uKbVV": "เกี่ยวกับ Origin Messaging",
   "2tPHpd": "กระเป๋าเงินดิจิตอล cryptocurrency เป็นโปรแกรมซอฟต์แวร์ที่เก็บคีย์ส่วนตัวและสาธารณะและโต้ตอบกับ blockchain ต่าง ๆ เพื่อให้ผู้ใช้ส่งและรับสกุลเงินดิจิตอล หากคุณต้องการใช้ Bitcoin หรือเงินดิจิตอลอื่น ๆ คุณจะต้องมีกระเป๋าเงินดิจิทัล",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "เกี่ยวกับตัวตนบนบล็อกเชน",
   "4o9sVo": "กระเป๋าเงินดิจิตอล cryptocurrency เป็นโปรแกรมซอฟต์แวร์ที่เก็บคีย์ส่วนตัวและสาธารณะและโต้ตอบกับ blockchain ต่าง ๆ เพื่อให้ผู้ใช้ส่งและรับสกุลเงินดิจิตอล หากคุณต้องการใช้ Bitcoin หรือเงินดิจิตอลอื่น ๆ คุณจะต้องมีกระเป๋าเงินดิจิทัล",
   "1JNI6V": "เรียนรู้เพิ่มเติม",
   "3NRLhm": "Crypto Wallet คืออะไร",
   "2HUml2": "กระเป๋าเงินดิจิตอล cryptocurrency เป็นโปรแกรมซอฟต์แวร์ที่เก็บคีย์ส่วนตัวและสาธารณะและโต้ตอบกับ blockchain ต่าง ๆ เพื่อให้ผู้ใช้ส่งและรับสกุลเงินดิจิตอล หากคุณต้องการใช้ Bitcoin หรือเงินดิจิตอลอื่น ๆ คุณจะต้องมีกระเป๋าเงินดิจิทัล",
   "28APX7": "รายชื่อของคุณกำลังรอ ...",
-  "1IXSHG": "ขอแสดงความยินดี",
-  "34IDA4": "คุณเปิดใช้งานบัญชีสำเร็จแล้ว ตอนนี้คุณพร้อมที่จะเดินทางต่อในตลาดกำเนิด",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "คุณได้ทำสิ่งต่อไปนี้เรียบร้อยแล้ว:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "การสร้างกระเป๋าเงิน",
-  "2sG5u1": "เปิดใช้งานการส่งข้อความ",
-  "2ApFEM": "การแจ้งเตือนบนเดสก์ท็อปถูกเปิดใช้งาน",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "ขั้นตอนที่เหลืออยู่:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "ใส่เงินในกระเป๋าของคุณ",
-  "4hOCr3": "กรอกข้อมูลส่วนตัวของคุณ",
+  "jC283": "เชื่อมต่อ Crypto Wallet",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "ส่งข้อความต้นฉบับ",
   "4aVWeW": "การส่งข้อความต้นทาง",
   "mmY61": "0 จาก 2 ข้อความ MetaMask ที่ลงนาม",
@@ -853,26 +885,12 @@
   "CagXi": "ไม่มี Web3",
   "2pKTLR": "หวาน! การแจ้งเตือนบนเดสก์ท็อปเปิดอยู่ :)",
   "XIw7y": "เริ่มต้นใช้งาน",
-  "1p9mMH": "ป้อนข้อมูลโปรไฟล์ของคุณ",
-  "2dpEtI": "ชื่อจริง",
-  "h7cxv": "นามสกุล",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} คุณต้องมีเงินในกระเป๋าเงินของคุณเพื่อสร้างข้อมูลประจำตัว คุณสามารถทำสิ่งนี้ได้ในภายหลังหลังจากที่คุณใส่เงินในกระเป๋าเงินของคุณโดยไปที่การตั้งค่าของคุณ",
-  "3uPAxx": "คุณไม่มีเงิน",
-  "1xCh1J": "ประกาศ",
-  "2Np1YB": "ข้ามไปก่อน",
-  "2RQByv": "การตีพิมพ์",
-  "1QWML6": "ชั่วคราว",
-  "39z7m5": "ในไม่ช้า",
-  "1IS4x0": "โต้ตอบ",
-  "3qH7cV": "ต้องระบุชื่อ",
-  "2jWTcd": "กระเป๋าเงินมือถือ Origin",
-  "CBV19": "กระเป๋าเงินมือถือ Origin จะอนุญาตให้คุณเก็บสกุลเงินดิจิตอลเพื่อให้คุณสามารถซื้อและขายใน DApp ของเรา",
-  "3Wb2Vz": "พร้อมใช้งานสำหรับ iOS และ Android",
-  "2nj6ZX": "MetaMask เป็นส่วนขยายของเบราว์เซอร์ที่จะช่วยให้คุณเข้าถึงเว็บที่กระจายอำนาจ",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "พร้อมใช้งานสำหรับ {browser}",
   "29RrPk": "เชื่อมต่อ MetaMask",
-  "jC283": "เชื่อมต่อ Crypto Wallet",
   "2lqwoN": "กำลังโหลด...",
   "3UjbU1": "เปิดใช้งานการแจ้งเตือนบนเดสก์ท็อป✅",
   "gLVF0": "การตั้งค่า",
@@ -888,6 +906,9 @@
   "38WM0A": "เซิร์ฟเวอร์บริดจ์",
   "23S1SF": "เซิร์ฟเวอร์การค้นพบ",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "ผู้ใช้ที่ไม่มีชื่อ",
