--- a/dapp3/translations/uk_UA.json
+++ b/dapp3/translations/uk_UA.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Обліковий запис Twitter підтверджено",
   "2BpmkI": "Обліковий запис Google підтверджено",
   "12mV06": "Телефон підтверджено",
@@ -85,6 +91,35 @@
     "schema.resumes": "Резюме",
     "schema.volunteers": "Добровільці"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "Завантаження...",
+  "1ydkJH": "Продовжити",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "Опублікувати",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "Увімкнути обмін повідомленнями",
   "1KvwDF": "Походження повідомлень",
   "2XaOyJ": "Почніть користуватися програмою Origin, перш ніж відправити користувачеві повідомлення",
@@ -108,6 +143,7 @@
   "4qkP5F": "Урожай, врожай",
   "BcfF1": "Видалити",
   "3N2LLn": "Ваш веб-переглядач не підтримує тег відео.",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "Продаж завершено",
   "2sSICu": "Початок спору",
   "1pxzG8": "Постанова зроблено",
+  "1dxXSN": "Почати",
   "2XVXB5": "Написання в блокчейн.",
   "48sqnA": "Це може зайняти хвилину.",
   "3JYttU": "Очікування підтвердження.",
@@ -237,7 +274,6 @@
   "2fdHS3": "Оновіть вашу компанію",
   "12qS4F": "Оновити тип списку",
   "3HqBJ": "Який тип оголошення Ви хочете створити?",
-  "1ydkJH": "Продовжити",
   "2oRomf": "Потрібна категорія",
   "tjihf": "Додати лістинг",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "Очікуючі",
   "4qOByY": "Зароблені",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "Токени зароблені",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "Завантаження...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "Приєднуйтесь до мене за походженням і отримайте маркери криптовалют походження (OGN). Походження - це новий ринок для купівлі та продажу з іншими користувачами. Заробляйте маркери походження, коли ви створюєте свій профіль, запрошуєте друзів і купуєте і продаєте на ринку.",
   "1gCRzk": "Приєднуйтесь до мене за походженням і отримайте маркери криптовалют походження (OGN). Походження - це новий ринок для купівлі та продажу з іншими користувачами. Заробляйте маркери походження, коли ви створюєте свій профіль, запрошуєте друзів і купуєте і продаєте на ринку.",
@@ -592,14 +626,14 @@
   "1A0dWH": "Почати",
   "2pjq9v": "Є питання?",
   "4BVEan": "Налагодити зв'язок",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "Приєднуйтесь до нашого {campaignName} щоб заробити жетони",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "Почати",
   "2El6Ld": "Відхилити",
   "1R5Tqk": "Прийняти умови",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "Зареєструйтеся для походження",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "Я приймаю умови та положення",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "На жаль, {country} не підходить",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "Перевірте свій номер телефону",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "Введіть нижче свій номер телефону, і OriginID надішле вам код підтвердження через SMS.",
-  "2kSdkz": "Підтверджуючи свій номер телефону, ви надаєте дозвіл Origin, щоб надіслати вам випадкові електронні листи, такі як сповіщення про ваші транзакції.",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "Введіть код, який ми послали вам, нижче",
   "OxVwu": "Телефонний номер підтверджено!",
   "2ocEjm": "Перевірте свій обліковий запис Twitter",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "{confirmations.noOfConfirmations} з 6 підтверджень",
   "2XqpJE": "Завершено ({confirmations.noOfConfirmations} підтверджень)",
-  "1dxXSN": "Почати",
   "3UgV1b": "Продаж за походженням",
   "1Lm6gh": "Помилка завантаження повідомлень",
   "2vAKrL": "Завантаження...",
@@ -761,13 +798,17 @@
     "_1": "Повідомлення"
   },
   "1NaRKF": "Переглянути все",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "Пов'язаний з",
-  "lGvCt": "ETH адреса",
-  "4CQP5I": "Редагувати профіль",
-  "2lBtlo": "Settings",
-  "11UGHW": "Моя ідентичність",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "Без імені користувача",
   "2qHaXn": "Захищеність профілю",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} відхилили вашу пропозицію на {title}",
   "2nsNrC": "{nameLink} прийняли вашу пропозицію на {title}",
   "3VLvv1": "Транзакція з {nameLink} завершена для {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "Чому мені потрібно це робити?",
   "1uKbVV": "Про походження повідомлень",
   "2tPHpd": "Криптовалютний гаманець - це програма, яка зберігає приватні та публічні ключі та взаємодіє з різними блокчейнами, щоб дозволити користувачам надсилати та отримувати цифрову валюту та контролювати їх баланс. Якщо ви хочете використовувати Bitcoin або будь-яку іншу криптовалюту, вам потрібно мати цифровий гаманець.",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "Про ідентичність на Блокчейн",
   "4o9sVo": "Криптовалютний гаманець - це програма, яка зберігає приватні та публічні ключі та взаємодіє з різними блокчейнами, щоб дозволити користувачам надсилати та отримувати цифрову валюту та контролювати їх баланс. Якщо ви хочете використовувати Bitcoin або будь-яку іншу криптовалюту, вам потрібно мати цифровий гаманець.",
   "1JNI6V": "Дізнатися більше",
   "3NRLhm": "Що таке Crypto Wallet?",
   "2HUml2": "Криптовалютний гаманець - це програма, яка зберігає приватні та публічні ключі та взаємодіє з різними блокчейнами, щоб дозволити користувачам надсилати та отримувати цифрову валюту та контролювати їх баланс. Якщо ви хочете використовувати Bitcoin або будь-яку іншу криптовалюту, вам потрібно мати цифровий гаманець.",
   "28APX7": "Ваше оголошення чекає ...",
-  "1IXSHG": "Вітаємо",
-  "34IDA4": "Ви успішно активували свій обліковий запис. Тепер ви готові продовжити свою подорож у Marketplace.",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "Ви завершили наступне:",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "Створення гаманця",
-  "2sG5u1": "Повідомлення ввімкнено",
-  "2ApFEM": "Сповіщення на робочому столі ввімкнено",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "Залишилися кроки:",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "Фінансуйте свій гаманець",
-  "4hOCr3": "Заповніть свій профіль",
+  "jC283": "Підключіть криптовий гаманець",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "Походження повідомлень",
   "4aVWeW": "Синхронізація походження повідомлень",
   "mmY61": "Підписано 0 з 2 повідомлень MetaMask",
@@ -853,26 +885,12 @@
   "CagXi": "Немає Web3",
   "2pKTLR": "Солодкий! Сповіщення на робочому столі:)",
   "XIw7y": "Починаємо",
-  "1p9mMH": "Введіть інформацію про свій профіль",
-  "2dpEtI": "Ім'я",
-  "h7cxv": "Прізвище",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} Для створення ідентичності потрібно мати кошти у вашому гаманці. Ви завжди можете зробити це пізніше після того, як ви поповните свій гаманець, перейшовши до налаштувань.",
-  "3uPAxx": "У вас немає коштів",
-  "1xCh1J": "Опублікувати",
-  "2Np1YB": "Пропустіть зараз",
-  "2RQByv": "опубліковано",
-  "1QWML6": "попередній",
-  "39z7m5": "скоро",
-  "1IS4x0": "інтерактивний",
-  "3qH7cV": "Потрібно вказати ім'я",
-  "2jWTcd": "Походження мобільного гаманця",
-  "CBV19": "Мобільний гаманець Origin дозволить вам зберігати крипто-валюту, щоб ви могли купити і продати на нашому DApp.",
-  "3Wb2Vz": "Доступно для iOS і Android",
-  "2nj6ZX": "MetaMask - це розширення браузера, яке дозволить вам отримати доступ до децентралізованої мережі.",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Доступно для {browser}",
   "29RrPk": "Підключіть MetaMask",
-  "jC283": "Підключіть криптовий гаманець",
   "2lqwoN": "Завантаження...",
   "3UjbU1": "Повідомлення на робочому столі ввімкнено ✅",
   "gLVF0": "Налаштування",
@@ -888,6 +906,9 @@
   "38WM0A": "Bridge Server",
   "23S1SF": "Discovery Server",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "Без імені користувача",
