--- a/dapp3/translations/zh_TW.json
+++ b/dapp3/translations/zh_TW.json
@@ -1,4 +1,10 @@
 {
+  "17TFCN": "Congratulations",
+  "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
+  "Jc810": "Earn OGN Tokens",
+  "18Mpz9": "Complete tasks and earn tokens.",
+  "1sXkbd": "Learn More >",
+  "1IZ5ov": "Ok",
   "1gr3xK": "Twitter帳戶已驗證",
   "2BpmkI": "Google帳戶已驗證",
   "12mV06": "電話驗證",
@@ -85,6 +91,35 @@
     "schema.resumes": "個人簡歷",
     "schema.volunteers": "志願者"
   },
+  "NvwsY": "Add your email",
+  "12r0wr": "Add name and photo",
+  "12mbSM": "Enter a valid email address",
+  "41nwZK": "What’s your email address?",
+  "1v9cYq": "We use your email to send you important notifications when you buy or sell.",
+  "byM4C": "What will be visible on the blockchain?",
+  "4AzHZ1": "That you have a verified email, but NOT your actual email address",
+  "2CPasx": "等待中...",
+  "1ydkJH": "繼續",
+  "3GfvJt": "We emailed you a code",
+  "CCuyh": "Please check your email",
+  "1RUbFv": "Enter verification code",
+  "1OgHgy": "Enter code",
+  "30sT07": "We sent a code to the email address you provided. Please enter it above.",
+  "2gpciW": "Resending...",
+  "2dOcWk": "Resend Code",
+  "3EZpe2": "Verify",
+  "4qV81m": "First Name",
+  "LnsvL": "Last Name",
+  "3QVGz1": "Your name and photo.",
+  "29AcyI": "Learn more",
+  "1xCh1J": "發布",
+  "29euMm": "Blockchain & Your Personal Data",
+  "22SFi3": "By creating a profile, you are associating your name and photo with your Ethereum account. This means that others will be able to connect your blockchain transactions to your name and photo.",
+  "2bKSKR": "Sign to Publish",
+  "vGI2a": "{walletType} will now ask you to sign your profile creation data.",
+  "3RkM95": "First Name is required",
+  "29aQWH": "Last Name is required",
+  "43Wd7": "Earnings",
   "13sLaP": "啟用消息傳遞",
   "1KvwDF": "原始消息",
   "2XaOyJ": "使用Origin開始之前，您可以向該用戶發送消息",
@@ -108,6 +143,7 @@
   "4qkP5F": "作物",
   "BcfF1": "去掉",
   "3N2LLn": "您的瀏覽器不支持視頻標記。",
+  "3cQwGQ": "Create a Profile",
   "4wUbJF": "Earn",
   "1UrIqq": "{content}{=/ night}",
   "u97bh": "/ night",
@@ -144,6 +180,7 @@
   "2K44VZ": "銷售完成",
   "2sSICu": "爭議開始",
   "1pxzG8": "裁決制定",
+  "1dxXSN": "入門",
   "2XVXB5": "寫入區塊鏈。",
   "48sqnA": "這可能需要一分鐘。",
   "3JYttU": "等待確認中。",
@@ -237,7 +274,6 @@
   "2fdHS3": "讓我們更新您的商家信息",
   "12qS4F": "更新列表類型",
   "3HqBJ": "你想新增什麼類型的發佈?",
-  "1ydkJH": "繼續",
   "2oRomf": "類別是必需的",
   "tjihf": "添加一個清單",
   "3Piqbx": "Payment",
@@ -502,7 +538,6 @@
   "wY0C5": "More Details",
   "4ETL05": "等待中",
   "4qOByY": "掙",
-  "1IZ5ov": "Ok",
   "2kJTBH": "Show",
   "4v4xei": "All",
   "2j242e": "Unlocked",
@@ -521,7 +556,6 @@
   "4FezaJ": "代幣賺了",
   "2haWvO": "Total Earnings",
   "1erpVf": "Tokens earned",
-  "2CPasx": "等待中...",
   "2tRIOg": "No campaigns detected",
   "2iDrtJ": "加入Origin並獲得Origin加密貨幣令牌（OGN）。 Origin是一個與其他用戶一起買賣的新市場。在您創建個人資料，邀請您的朋友以及在市場上買賣時賺取原始代幣。",
   "1gCRzk": "加入Origin並獲得Origin加密貨幣令牌（OGN）。 Origin是一個與其他用戶一起買賣的新市場。在您創建個人資料，邀請您的朋友以及在市場上買賣時賺取原始代幣。",
@@ -592,14 +626,14 @@
   "1A0dWH": "入門",
   "2pjq9v": "有問題嗎？",
   "4BVEan": "保持聯繫",
+  "1sPKWe": "Sign Up for Origin Rewards",
   "3gLqI4": "Join Campaign",
   "44Obrh": "加入我們的 {campaignName} 來賺取代幣",
   "1JeQU0": "Earn OGN by completing tasks like verifying your identity and sharing Origin with your friends. OGN can be used in a variety of ways. Earned OGN will be transferred after the end of the {campaignName}.",
   "4fuMIp": "入門",
   "2El6Ld": "解僱",
   "1R5Tqk": "接受條款",
-  "m0l6": "Sign Up for Origin",
-  "2EpzBo": "註冊原產地",
+  "4DsgoB": "Sign Up for Origin Rewards",
   "1c8jIG": "我接受這些條款和條件",
   "2JZUuK": "Country not eligible",
   "3ARgQ2": "糟糕， {country} 不符合條件",
@@ -629,9 +663,13 @@
   "3d1Uto": "Other users will know that you have a verified Google account, but your account details will not be published on the blockchain. We will never post on your behalf.",
   "FoBDR": "Google account verified!",
   "1ZMsNQ": "Success!",
+  "PqBCY": "Verify Phone Number",
   "1iXhvu": "驗證您的電話號碼",
+  "11AuN2": "Enter a valid 10-digit phone number",
   "2DiVEd": "在下面輸入您的電話號碼，OriginID將通過短信向您發送驗證碼。",
-  "2kSdkz": "通過驗證您的電話號碼，您可以授予Origin權限，以便偶爾向您發送電子郵件，例如有關您的交易的通知。",
+  "3O3WLt": "What will be visible on the blockchain?",
+  "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
+  "1zz7PL": "By verifying your phone number, you give Origin permission to send you occasional text messages such as notifications about your transactions.",
   "2QXVSq": "輸入我們發送給您的代碼",
   "OxVwu": "電話號碼已驗證！",
   "2ocEjm": "驗證您的Twitter帳戶",
@@ -737,7 +775,6 @@
   },
   "3jDHv4": "6個確認中的{confirmations.noOfConfirmations} 個",
   "2XqpJE": "完成（{confirmations.noOfConfirmations} 確認）",
-  "1dxXSN": "入門",
   "3UgV1b": "賣原產地",
   "1Lm6gh": "加載郵件時出錯",
   "2vAKrL": "載入中...",
@@ -761,13 +798,17 @@
     "_1": "通知"
   },
   "1NaRKF": "查看全部",
+  "3osdtR": "You haven't created a profile yet",
+  "azH1k": "Creating a profile allows other users to know that you are real and increases the chances of successful transactions on Origin.",
   "349RB": "連接到",
-  "lGvCt": "ETH地址",
-  "4CQP5I": "編輯個人資料",
-  "2lBtlo": "Settings",
-  "11UGHW": "我的身份",
+  "4j25sQ": "Active wallet",
+  "RTtVv": "Hold on while we load your identity...",
+  "2fX2id": "Profile",
   "1IuKjr": "未命名的用戶",
   "2qHaXn": "輪廓強度",
+  "FuIJL": "Strengthen profile & earn OGN",
+  "3cNRo6": "Wallet balance",
+  "2owL8m": "Proxy Account",
   "4xWP3l": "{nameLink} 拒絕了您的報價 {title}",
   "2nsNrC": "{nameLink} 接受了你的報價 {title}",
   "3VLvv1": "交易 {nameLink} 結束為 {title}",
@@ -785,25 +826,16 @@
   "3XLNbf": "為什麼我需要這樣做？",
   "1uKbVV": "關於Origin Messaging",
   "2tPHpd": "加密貨幣錢包是一種軟件程序，用於存儲私鑰和公鑰，並與各種區塊鏈交互，使用戶能夠發送和接收數字貨幣並監控其餘額。如果您想使用比特幣或任何其他加密貨幣，您將需要一個數字錢包。",
+  "29qjqH": "Download the Origin Marketplace App",
+  "2hg0gR": "Unlock the full experience",
   "1pt6RF": "關於區塊鏈的身份",
   "4o9sVo": "加密貨幣錢包是一種軟件程序，用於存儲私鑰和公鑰，並與各種區塊鏈交互，使用戶能夠發送和接收數字貨幣並監控其餘額。如果您想使用比特幣或任何其他加密貨幣，您將需要一個數字錢包。",
   "1JNI6V": "學到更多",
   "3NRLhm": "什麼是加密錢包？",
   "2HUml2": "加密貨幣錢包是一種軟件程序，用於存儲私鑰和公鑰，並與各種區塊鏈交互，使用戶能夠發送和接收數字貨幣並監控其餘額。如果您想使用比特幣或任何其他加密貨幣，您將需要一個數字錢包。",
   "28APX7": "您的商家信息等待......",
-  "1IXSHG": "祝賀",
-  "34IDA4": "您已成功激活帳戶。您現在已準備好繼續在Origin Marketplace中旅行。",
-  "1Xq4Zv": "{=You have now completed the following:}{=Wallet CreationMessaging EnabledDesktop Notifications Enabled}",
-  "3okVtw": "您現在已完成以下操作：",
-  "2rNbUc": "{=Wallet Creation}{=Messaging Enabled}{=Desktop Notifications Enabled}",
-  "3iUZU1": "錢包創作",
-  "2sG5u1": "消息已啟用",
-  "2ApFEM": "桌面通知已啟用",
-  "3ZvK3s": "{=Remaining steps:}{=Fund your walletComplete your Profile}",
-  "41cj3j": "剩下的步驟：",
-  "2U4dtG": "{=Fund your wallet}{=Complete your Profile}",
-  "si3fB": "資助你的錢包",
-  "4hOCr3": "完成您的個人資料",
+  "jC283": "連接加密錢包",
+  "1xQN4D": "In order to successfully transact with others on our DApp, you’ll need a wallet to store cryptocurrency.",
   "t06nL": "原始消息",
   "4aVWeW": "原始消息同步",
   "mmY61": "已簽署2個MetaMask消息中的0個",
@@ -853,26 +885,12 @@
   "CagXi": "沒有Web3",
   "2pKTLR": "甜！桌面通知正在:)",
   "XIw7y": "入門",
-  "1p9mMH": "輸入您的資料信息",
-  "2dpEtI": "名字",
-  "h7cxv": "姓",
-  "2pz6sX": "Tell us a bit about yourself",
-  "3uFhNl": "{=You don't have funds} 您需要在錢包中有資金來創建身份。通過轉到您的設置，您可以在資金完成後立即執行此操作。",
-  "3uPAxx": "你沒有資金",
-  "1xCh1J": "發布",
-  "2Np1YB": "暫時跳過",
-  "2RQByv": "發表",
-  "1QWML6": "臨時",
-  "39z7m5": "不久",
-  "1IS4x0": "互動",
-  "3qH7cV": "名字是必需的",
-  "2jWTcd": "Origin移動錢包",
-  "CBV19": "Origin的手機錢包將允許您存儲加密貨幣，以便您可以在我們的DApp上進行買賣。",
-  "3Wb2Vz": "適用於iOS和Android",
-  "2nj6ZX": "MetaMask是一個瀏覽器擴展，允許您訪問分散的Web。",
+  "8Z8ba": "Create an Account",
+  "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
+  "4G99YP": "MetaMask",
+  "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "可用於 {browser}",
   "29RrPk": "連接MetaMask",
-  "jC283": "連接加密錢包",
   "2lqwoN": "等待中...",
   "3UjbU1": "已啟用桌面通知✅",
   "gLVF0": "設置",
@@ -888,6 +906,9 @@
   "38WM0A": "橋接伺服器",
   "23S1SF": "Discovery Server",
   "nqaAu": "Relayer Server",
+  "2OjTbq": "Enable Proxy Accounts",
+  "1KAkeW": "Warning: enable at your own risk!",
+  "4eYK1C": "Enable Relayer",
   "pT9j": "Held",
   "NrhOS": "Released",
   "QUO1v": "Amount",
@@ -1044,20 +1065,13 @@
   "2330bB": "Earn even more OGN when you verify your Facebook, Twitter, and Airbnb profiles.",
   "1b7Zwb": "Earn up to",
   "29Quwo": "Got it!",
-  "1tixem": "Next Step: Verify your phone number",
-  "2k5cTO": "Strengthen your profile even further by verifying a valid 10-digit phone number",
-  "IqnqE": "Verify to earn",
-  "Ek9Tv": "Continue",
-  "4okJre": "Next Step: Verify your email",
-  "3VMsLo": "Publish to save your changes or continue with verifications",
-  "cjvCD": "Publish Changes",
   "2MO8B7": "Publish Changes",
-  "1JLKPg": "Enroll to earn Origin cryptocurrency tokens (OGN)",
-  "1YFhvm": "Earn tokens by completing your profile.",
-  "3iqW1P": "Enroll Now",
+  "1aRHEU": "Continue",
+  "2HjwUz": "Verify your phone number & earn OGN",
+  "2C3Vq2": "Strengthen your profile even further by verifying a valid 10-digit phone number.",
+  "2KJb7i": "Verify to earn {=10 OGN}",
+  "1cMnBB": "10 OGN",
   "3Rsycf": "Skip",
-  "33tWcy": "Upload a photo and provide a name and description",
-  "1LH6Qw": "Get Started",
   "fs65Z": "You have unpublished changes",
   "3O45za": "Powered by",
   "2jblSi": "未命名用戶",
